update repository to match chosen open src commits