@@ -20,15 +20,13 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 import java.util.Collection;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.camel.Endpoint;
 import org.apache.camel.Exchange;
 import org.apache.camel.InvalidPayloadException;
 import org.apache.camel.Message;
-import org.apache.camel.health.HealthCheck;
-import org.apache.camel.health.HealthCheckHelper;
-import org.apache.camel.health.WritableHealthCheckRepository;
 import org.apache.camel.support.DefaultProducer;
 import org.apache.camel.support.ResourceHelper;
 import org.apache.camel.util.ObjectHelper;
@@ -72,8 +70,6 @@ public class EventbridgeProducer extends DefaultProducer {
     private static final Logger LOG = LoggerFactory.getLogger(EventbridgeProducer.class);
 
     private transient String eventbridgeProducerToString;
-    private HealthCheck producerHealthCheck;
-    private WritableHealthCheckRepository healthCheckRepository;
 
     public EventbridgeProducer(Endpoint endpoint) {
         super(endpoint);
@@ -513,7 +509,7 @@ public class EventbridgeProducer extends DefaultProducer {
             PutEventsRequestEntry.Builder entryBuilder = PutEventsRequestEntry.builder();
             if (ObjectHelper.isNotEmpty(exchange.getIn().getHeader(EventbridgeConstants.EVENT_RESOURCES_ARN))) {
                 String resourcesArn = exchange.getIn().getHeader(EventbridgeConstants.EVENT_RESOURCES_ARN, String.class);
-                entryBuilder.resources(Stream.of(resourcesArn.split(",")).toList());
+                entryBuilder.resources(Stream.of(resourcesArn.split(",")).collect(Collectors.toList()));
             } else {
                 throw new IllegalArgumentException("At least one resource ARN must be specified");
             }
@@ -553,29 +549,4 @@ public class EventbridgeProducer extends DefaultProducer {
     public static Message getMessageForResponse(final Exchange exchange) {
         return exchange.getMessage();
     }
-
-    @Override
-    protected void doStart() throws Exception {
-        // health-check is optional so discover and resolve
-        healthCheckRepository = HealthCheckHelper.getHealthCheckRepository(
-                getEndpoint().getCamelContext(),
-                "producers",
-                WritableHealthCheckRepository.class);
-
-        if (healthCheckRepository != null) {
-            String id = getEndpoint().getId();
-            producerHealthCheck = new EventbridgeProducerHealthCheck(getEndpoint(), id);
-            producerHealthCheck.setEnabled(getEndpoint().getComponent().isHealthCheckProducerEnabled());
-            healthCheckRepository.addHealthCheck(producerHealthCheck);
-        }
-    }
-
-    @Override
-    protected void doStop() throws Exception {
-        if (healthCheckRepository != null && producerHealthCheck != null) {
-            healthCheckRepository.removeHealthCheck(producerHealthCheck);
-            producerHealthCheck = null;
-        }
-    }
-
 }
