@@ -19,6 +19,7 @@ package org.apache.camel.component.azure.cosmosdb.integration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import com.azure.cosmos.models.CosmosContainerProperties;
 import com.azure.cosmos.models.CosmosDatabaseProperties;
@@ -86,7 +87,7 @@ public class CosmosDbProducerIT extends BaseCamelCosmosDbTestSupport {
 
         final List<String> returnedDatabasesAsString = returnedDatabases
                 .stream().map(CosmosDatabaseProperties::getId)
-                .toList();
+                .collect(Collectors.toList());
 
         assertEquals(5, returnedDatabasesAsString.size());
 
