@@ -21,8 +21,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.HashSet;
-import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
@@ -34,10 +32,10 @@ import org.apache.camel.Exchange;
 import org.apache.camel.Message;
 import org.apache.camel.Processor;
 import org.apache.camel.component.file.watch.constants.FileEvent;
-import org.apache.camel.component.file.watch.constants.FileEventEnum;
 import org.apache.camel.component.file.watch.utils.PathUtils;
 import org.apache.camel.support.DefaultConsumer;
 import org.apache.camel.util.AntPathMatcher;
+import org.apache.camel.util.ObjectHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -48,7 +46,6 @@ public class FileWatchConsumer extends DefaultConsumer {
 
     private static final Logger LOG = LoggerFactory.getLogger(FileWatchConsumer.class);
 
-    private final Set<FileEventEnum> events = new HashSet<>();
     private ExecutorService watchDirExecutorService;
     private ExecutorService pollExecutorService;
     private LinkedBlockingQueue<FileEvent> eventQueue;
@@ -66,16 +63,6 @@ public class FileWatchConsumer extends DefaultConsumer {
 
         antPathMatcher = new AntPathMatcher();
         baseDirectory = Paths.get(getEndpoint().getPath()).toAbsolutePath();
-    }
-
-    @Override
-    protected void doInit() throws Exception {
-        super.doInit();
-
-        for (String event : getEndpoint().getEvents().split(",")) {
-            FileEventEnum fe = FileEventEnum.valueOf(event);
-            events.add(fe);
-        }
     }
 
     @Override
@@ -178,8 +165,10 @@ public class FileWatchConsumer extends DefaultConsumer {
     }
 
     private boolean matchFilters(FileEvent fileEvent) {
-        if (!events.isEmpty() && !events.contains(fileEvent.getEventType())) {
-            return false;
+        if (ObjectHelper.isNotEmpty(getEndpoint().getEvents())) {
+            if (!getEndpoint().getEvents().contains(fileEvent.getEventType())) {
+                return false;
+            }
         }
 
         if (!getEndpoint().isRecursive()) {
@@ -197,7 +186,7 @@ public class FileWatchConsumer extends DefaultConsumer {
         }
 
         String pattern = getEndpoint().getAntInclude();
-        if (pattern == null || pattern.isBlank()) {
+        if (pattern == null || pattern.trim().isEmpty()) {
             return true;
         }
 
@@ -244,7 +233,6 @@ public class FileWatchConsumer extends DefaultConsumer {
                 try {
                     event = eventQueue.poll(1000, TimeUnit.MILLISECONDS);
                 } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
                     return;
                 }
 
