@@ -24,6 +24,7 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.apache.camel.builder.RouteBuilder;
@@ -51,7 +52,7 @@ import static org.junit.jupiter.api.Assertions.fail;
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class AbstractInfinispanRemoteClusteredIT {
     @RegisterExtension
-    public static InfinispanService service = InfinispanServiceFactory.createSingletonInfinispanService();
+    public static InfinispanService service = InfinispanServiceFactory.createService();
 
     private RemoteCacheManager cacheContainer;
 
@@ -71,7 +72,7 @@ public class AbstractInfinispanRemoteClusteredIT {
     }
 
     public void runTest(Function<RunnerEnv, RouteBuilder> routeBuilderFunction) throws Exception {
-        final List<String> clients = IntStream.range(0, 3).mapToObj(Integer::toString).toList();
+        final List<String> clients = IntStream.range(0, 3).mapToObj(Integer::toString).collect(Collectors.toList());
         final List<String> results = new ArrayList<>();
 
         final CountDownLatch latch = new CountDownLatch(clients.size());
@@ -120,7 +121,7 @@ public class AbstractInfinispanRemoteClusteredIT {
 
         try (DefaultCamelContext context = new DefaultCamelContext()) {
             context.disableJMX();
-            context.getCamelContextExtension().setName("context-" + id);
+            context.setName("context-" + id);
             context.addService(clusterService);
 
             RunnerEnv contextEnv = new RunnerEnv();
