@@ -16,9 +16,8 @@
  */
 package org.apache.camel.component.jetty;
 
-import java.io.File;
 import java.security.Principal;
-import java.util.List;
+import java.util.Arrays;
 
 import jakarta.servlet.http.HttpServletRequest;
 
@@ -28,13 +27,12 @@ import org.apache.camel.Processor;
 import org.apache.camel.RuntimeCamelException;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.http.base.HttpOperationFailedException;
-import org.eclipse.jetty.ee10.servlet.security.ConstraintMapping;
-import org.eclipse.jetty.ee10.servlet.security.ConstraintSecurityHandler;
-import org.eclipse.jetty.security.Constraint;
+import org.eclipse.jetty.security.ConstraintMapping;
+import org.eclipse.jetty.security.ConstraintSecurityHandler;
 import org.eclipse.jetty.security.HashLoginService;
 import org.eclipse.jetty.security.SecurityHandler;
 import org.eclipse.jetty.security.authentication.BasicAuthenticator;
-import org.eclipse.jetty.util.resource.URLResourceFactory;
+import org.eclipse.jetty.util.security.Constraint;
 import org.junit.jupiter.api.Test;
 
 import static org.apache.camel.test.junit5.TestSupport.assertIsInstanceOf;
@@ -46,10 +44,8 @@ public class HttpBasicAuthTest extends BaseJettyTest {
 
     @BindToRegistry("myAuthHandler")
     public SecurityHandler getSecurityHandler() {
-        Constraint constraint = new Constraint.Builder()
-                .name("BASIC")
-                .roles("user")
-                .authorization(Constraint.Authorization.SPECIFIC_ROLE).build();
+        Constraint constraint = new Constraint(Constraint.__BASIC_AUTH, "user");
+        constraint.setAuthenticate(true);
 
         ConstraintMapping cm = new ConstraintMapping();
         cm.setPathSpec("/*");
@@ -57,14 +53,11 @@ public class HttpBasicAuthTest extends BaseJettyTest {
 
         ConstraintSecurityHandler sh = new ConstraintSecurityHandler();
         sh.setAuthenticator(new BasicAuthenticator());
-        sh.setConstraintMappings(List.of(cm));
+        sh.setConstraintMappings(Arrays.asList(new ConstraintMapping[] { cm }));
 
-        HashLoginService loginService = new HashLoginService(
-                "MyRealm",
-                new URLResourceFactory().newResource(
-                        new File("src/test/resources/myRealm.properties").toURI()));
+        HashLoginService loginService = new HashLoginService("MyRealm", "src/test/resources/myRealm.properties");
         sh.setLoginService(loginService);
-        sh.setConstraintMappings(List.of(cm));
+        sh.setConstraintMappings(Arrays.asList(new ConstraintMapping[] { cm }));
 
         return sh;
     }
