@@ -23,13 +23,12 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.file.cluster.FileLockClusterService;
 import org.apache.camel.impl.DefaultCamelContext;
-import org.awaitility.Awaitility;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,7 +39,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public class MasterComponentTest {
     private static final Logger LOGGER = LoggerFactory.getLogger(MasterComponentTest.class);
     private static final List<String> INSTANCES
-            = IntStream.range(0, 3).mapToObj(Integer::toString).toList();
+            = IntStream.range(0, 3).mapToObj(Integer::toString).collect(Collectors.toList());
     private static final List<String> RESULTS = new ArrayList<>();
     private static final ScheduledExecutorService SCHEDULER = Executors.newScheduledThreadPool(INSTANCES.size());
     private static final CountDownLatch LATCH = new CountDownLatch(INSTANCES.size());
@@ -75,7 +74,7 @@ public class MasterComponentTest {
 
             DefaultCamelContext context = new DefaultCamelContext();
             context.disableJMX();
-            context.getCamelContextExtension().setName("context-" + id);
+            context.setName("context-" + id);
             context.addService(service);
             context.addRoutes(new RouteBuilder() {
                 @Override
@@ -89,23 +88,19 @@ public class MasterComponentTest {
 
             // Start the context after some random time so the startup order
             // changes for each test.
-            Awaitility.await().pollDelay(ThreadLocalRandom.current().nextInt(500), TimeUnit.MILLISECONDS)
-                    .untilAsserted(() -> Assertions.assertDoesNotThrow(() -> {
-                        LOGGER.info("Starting node {}", id);
-                        context.start();
-                    }));
+            Thread.sleep(ThreadLocalRandom.current().nextInt(500));
+            context.start();
 
-            LOGGER.info("Waiting for {} events on node {}", events, id);
             contextLatch.await();
 
-            LOGGER.info("Shutting down node {}", id);
+            LOGGER.debug("Shutting down node {}", id);
             RESULTS.add(id);
 
             context.stop();
 
             LATCH.countDown();
         } catch (Exception e) {
-            LOGGER.warn("{}", e.getMessage(), e);
+            LOGGER.warn("", e);
         }
     }
 }
