@@ -21,14 +21,18 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.apache.camel.Endpoint;
 import org.apache.camel.EndpointInject;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
+import org.apache.camel.component.pulsar.PulsarComponent;
 import org.apache.camel.component.pulsar.PulsarMessageReceipt;
+import org.apache.camel.component.pulsar.utils.AutoConfiguration;
 import org.apache.camel.component.pulsar.utils.message.PulsarMessageHeaders;
 import org.apache.camel.spi.Registry;
+import org.apache.camel.support.SimpleRegistry;
 import org.apache.pulsar.client.api.MessageId;
 import org.apache.pulsar.client.api.Producer;
 import org.apache.pulsar.client.api.PulsarClient;
@@ -78,13 +82,21 @@ public class PulsarSuspendRouteIT extends PulsarITSupport {
     }
 
     @Override
-    protected void bindToRegistry(Registry registry) throws Exception {
+    protected Registry createCamelRegistry() throws Exception {
+        SimpleRegistry registry = new SimpleRegistry();
         registerPulsarBeans(registry);
+        return registry;
     }
 
-    private void registerPulsarBeans(Registry registry) throws PulsarClientException {
+    private void registerPulsarBeans(SimpleRegistry registry) throws PulsarClientException {
         PulsarClient pulsarClient = setUpPulsarClient();
-        registerPulsarBeans(registry, pulsarClient, context);
+        AutoConfiguration autoConfiguration = new AutoConfiguration(null, null);
+
+        registry.bind("pulsarClient", pulsarClient);
+        PulsarComponent comp = new PulsarComponent(context);
+        comp.setAutoConfiguration(autoConfiguration);
+        comp.setPulsarClient(pulsarClient);
+        registry.bind("pulsar", comp);
     }
 
     private PulsarClient setUpPulsarClient() throws PulsarClientException {
@@ -200,7 +212,7 @@ public class PulsarSuspendRouteIT extends PulsarITSupport {
 
         List<MessageId> receivedMessageIds = to.getReceivedExchanges().stream()
                 .map(e -> e.getIn().getHeader(PulsarMessageHeaders.MESSAGE_ID, MessageId.class))
-                .toList();
+                .collect(Collectors.toList());
         assertEquals(sentMessageIds, receivedMessageIds);
     }
 
@@ -218,7 +230,7 @@ public class PulsarSuspendRouteIT extends PulsarITSupport {
             }
         });
 
-        to.setExpectedMessageCount(1);
+        to.setExpectedMessageCount(0);
         to.setAssertPeriod(2000);
 
         context.getRouteController().suspendRoute(ROUTE_ID);
