@@ -18,6 +18,7 @@ package org.apache.camel.health;
 
 import java.util.Collection;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.camel.CamelContext;
@@ -79,7 +80,7 @@ public interface HealthCheckRegistry extends CamelContextAware, StaticService, I
     default Collection<String> getCheckIDs() {
         return stream()
                 .map(HealthCheck::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -107,7 +108,7 @@ public interface HealthCheckRegistry extends CamelContextAware, StaticService, I
      * could integrate such checks within its health endpoint or make it available only as separate endpoint.
      */
     static HealthCheckRegistry get(CamelContext context) {
-        return context != null ? context.getCamelContextExtension().getContextPlugin(HealthCheckRegistry.class) : null;
+        return context != null ? context.getExtension(HealthCheckRegistry.class) : null;
     }
 
     /**
