@@ -19,15 +19,16 @@ package org.apache.camel.component.properties;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.Stack;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.CamelContextAware;
+import org.apache.camel.ExtendedCamelContext;
 import org.apache.camel.PropertiesLookupListener;
 import org.apache.camel.StaticService;
 import org.apache.camel.api.management.ManagedAttribute;
@@ -37,9 +38,7 @@ import org.apache.camel.spi.Configurer;
 import org.apache.camel.spi.FactoryFinder;
 import org.apache.camel.spi.LoadablePropertiesSource;
 import org.apache.camel.spi.PropertiesFunction;
-import org.apache.camel.spi.PropertiesResolvedValue;
 import org.apache.camel.spi.PropertiesSource;
-import org.apache.camel.spi.PropertiesSourceFactory;
 import org.apache.camel.spi.annotations.JdkService;
 import org.apache.camel.support.OrderedComparator;
 import org.apache.camel.support.PatternHelper;
@@ -49,7 +48,6 @@ import org.apache.camel.util.FilePathResolver;
 import org.apache.camel.util.ObjectHelper;
 import org.apache.camel.util.OrderedLocationProperties;
 import org.apache.camel.util.OrderedProperties;
-import org.apache.camel.util.PropertiesHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -58,7 +56,7 @@ import org.slf4j.LoggerFactory;
  */
 @ManagedResource(description = "Managed PropertiesComponent")
 @JdkService(org.apache.camel.spi.PropertiesComponent.FACTORY)
-@Configurer(extended = true)
+@Configurer(bootstrap = true)
 public class PropertiesComponent extends ServiceSupport
         implements org.apache.camel.spi.PropertiesComponent, StaticService, CamelContextAware {
 
@@ -112,25 +110,22 @@ public class PropertiesComponent extends ServiceSupport
     private PropertiesParser propertiesParser = new DefaultPropertiesParser(this);
     private final PropertiesLookup propertiesLookup = new DefaultPropertiesLookup(this);
     private final List<PropertiesLookupListener> propertiesLookupListeners = new ArrayList<>();
-    private final PropertiesSourceFactory propertiesSourceFactory = new DefaultPropertiesSourceFactory(this);
-    private final DefaultPropertiesLookupListener defaultPropertiesLookupListener = new DefaultPropertiesLookupListener();
     private final List<PropertiesSource> sources = new ArrayList<>();
     private List<PropertiesLocation> locations = new ArrayList<>();
     private String location;
     private boolean ignoreMissingLocation;
-    private boolean ignoreMissingProperty;
     private boolean nestedPlaceholder = true;
     private String encoding;
     private boolean defaultFallbackEnabled = true;
     private Properties initialProperties;
     private Properties overrideProperties;
-    private final Stack<Properties> localProperties = new Stack<>();;
+    private final ThreadLocal<Properties> localProperties = new ThreadLocal<>();
+    private volatile boolean localPropertiesEnabled;
     private int systemPropertiesMode = SYSTEM_PROPERTIES_MODE_OVERRIDE;
     private int environmentVariableMode = ENVIRONMENT_VARIABLES_MODE_OVERRIDE;
     private boolean autoDiscoverPropertiesSources = true;
 
     public PropertiesComponent() {
-        addPropertiesLookupListener(defaultPropertiesLookupListener);
         // include out of the box functions
         addPropertiesFunction(new EnvPropertiesFunction());
         addPropertiesFunction(new SysPropertiesFunction());
@@ -178,25 +173,12 @@ public class PropertiesComponent extends ServiceSupport
     @Override
     public Optional<String> resolveProperty(String key) {
         try {
-            boolean keep = isIgnoreMissingProperty();
-            String value = parseUri(key, propertiesLookup, keep);
-            if (value == null) {
-                return Optional.empty();
-            }
+            String value = parseUri(key, propertiesLookup, false);
             return Optional.of(value);
         } catch (IllegalArgumentException e) {
             // property not found
             return Optional.empty();
         }
-    }
-
-    @Override
-    public Optional<PropertiesResolvedValue> getResolvedValue(String key) {
-        return Optional.ofNullable(defaultPropertiesLookupListener.getProperty(key));
-    }
-
-    public void updateResolvedValue(String key, String newValue, String newSource) {
-        defaultPropertiesLookupListener.updateValue(key, newValue, newSource);
     }
 
     @Override
@@ -217,12 +199,13 @@ public class PropertiesComponent extends ServiceSupport
             // override properties from higher priority ones
             for (int i = sources.size(); i-- > 0;) {
                 PropertiesSource ps = sources.get(i);
-                if (ps instanceof LoadablePropertiesSource lps) {
+                if (ps instanceof LoadablePropertiesSource) {
+                    LoadablePropertiesSource lps = (LoadablePropertiesSource) ps;
                     Properties p = lps.loadProperties();
-                    if (p instanceof OrderedLocationProperties propSource) {
-                        prop.putAll(propSource);
-                    } else if (ps instanceof LocationPropertiesSource propSource) {
-                        String loc = propSource.getLocation().getPath();
+                    if (p instanceof OrderedLocationProperties) {
+                        prop.putAll((OrderedLocationProperties) p);
+                    } else if (ps instanceof LocationPropertiesSource) {
+                        String loc = ((LocationPropertiesSource) ps).getLocation().getPath();
                         prop.putAll(loc, p);
                     } else {
                         prop.putAll(lps.getName(), p);
@@ -249,21 +232,6 @@ public class PropertiesComponent extends ServiceSupport
     }
 
     @Override
-    public Properties extractProperties(String optionPrefix, boolean nested) {
-        Properties answer = new Properties();
-        var map = loadPropertiesAsMap(k -> {
-            boolean accept = k.startsWith(optionPrefix);
-            if (accept && !nested) {
-                int pos = k.lastIndexOf('.');
-                accept = pos == -1 || pos <= optionPrefix.length();
-            }
-            return accept;
-        });
-        answer.putAll(PropertiesHelper.extractProperties(map, optionPrefix));
-        return answer;
-    }
-
-    @Override
     public Properties loadProperties(Predicate<String> filter, Function<String, String> keyMapper) {
         OrderedLocationProperties prop = new OrderedLocationProperties();
 
@@ -284,9 +252,11 @@ public class PropertiesComponent extends ServiceSupport
             // override properties from higher priority ones
             for (int i = sources.size(); i-- > 0;) {
                 PropertiesSource ps = sources.get(i);
-                if (ps instanceof LoadablePropertiesSource lps) {
+                if (ps instanceof LoadablePropertiesSource) {
+                    LoadablePropertiesSource lps = (LoadablePropertiesSource) ps;
                     Properties p = lps.loadProperties(filter);
-                    if (p instanceof OrderedLocationProperties olp) {
+                    if (p instanceof OrderedLocationProperties) {
+                        OrderedLocationProperties olp = (OrderedLocationProperties) p;
                         for (String name : olp.stringPropertyNames()) {
                             String loc = olp.getLocation(name);
                             Object value = olp.getProperty(name);
@@ -295,7 +265,8 @@ public class PropertiesComponent extends ServiceSupport
                         }
                     } else {
                         String loc = lps.getName();
-                        if (ps instanceof LocationPropertiesSource olp) {
+                        if (ps instanceof LocationPropertiesSource) {
+                            LocationPropertiesSource olp = (LocationPropertiesSource) ps;
                             loc = olp.getLocation().getPath();
                         }
                         for (String name : p.stringPropertyNames()) {
@@ -362,7 +333,7 @@ public class PropertiesComponent extends ServiceSupport
         if (locations.isEmpty()) {
             return Collections.emptyList();
         } else {
-            return locations.stream().map(PropertiesLocation::toString).toList();
+            return locations.stream().map(PropertiesLocation::toString).collect(Collectors.toList());
         }
     }
 
@@ -377,10 +348,8 @@ public class PropertiesComponent extends ServiceSupport
 
         // we need to re-create the property sources which may have already been created from locations
         this.sources.removeIf(s -> s instanceof LocationPropertiesSource);
-        // ensure the locations are in the same order as here, and therefore we provide the order number
-        int order = 100;
         for (PropertiesLocation loc : locations) {
-            addPropertiesLocationsAsPropertiesSource(loc, order++);
+            addPropertiesLocationsAsPropertiesSource(loc);
         }
     }
 
@@ -397,11 +366,6 @@ public class PropertiesComponent extends ServiceSupport
         }
 
         setLocations(propertiesLocations);
-    }
-
-    @Override
-    public PropertiesSourceFactory getPropertiesSourceFactory() {
-        return propertiesSourceFactory;
     }
 
     public void addLocation(PropertiesLocation location) {
@@ -499,15 +463,6 @@ public class PropertiesComponent extends ServiceSupport
         this.ignoreMissingLocation = ignoreMissingLocation;
     }
 
-    @ManagedAttribute(description = "Ignore missing property")
-    public boolean isIgnoreMissingProperty() {
-        return ignoreMissingProperty;
-    }
-
-    public void setIgnoreMissingProperty(boolean ignoreMissingProperty) {
-        this.ignoreMissingProperty = ignoreMissingProperty;
-    }
-
     @ManagedAttribute(description = "Nested placeholder")
     public boolean isNestedPlaceholder() {
         return nestedPlaceholder;
@@ -570,9 +525,11 @@ public class PropertiesComponent extends ServiceSupport
     @Override
     public void setLocalProperties(Properties localProperties) {
         if (localProperties != null) {
-            this.localProperties.push(localProperties);
-        } else if (!this.localProperties.isEmpty()) {
-            this.localProperties.pop();
+            this.localProperties.set(localProperties);
+            this.localPropertiesEnabled = true;
+        } else {
+            this.localProperties.remove();
+            this.localPropertiesEnabled = false;
         }
     }
 
@@ -581,10 +538,15 @@ public class PropertiesComponent extends ServiceSupport
      * currently in use.
      */
     public Properties getLocalProperties() {
-        if (localProperties.isEmpty()) {
-            return null;
-        }
-        return localProperties.peek();
+        return localPropertiesEnabled ? localProperties.get() : null;
+    }
+
+    /**
+     * Gets the functions registered in this properties component.
+     */
+    @Deprecated
+    public Map<String, PropertiesFunction> getFunctions() {
+        return propertiesFunctionResolver.getFunctions();
     }
 
     @Override
@@ -603,6 +565,16 @@ public class PropertiesComponent extends ServiceSupport
     @Override
     public boolean hasPropertiesFunction(String name) {
         return propertiesFunctionResolver.hasFunction(name);
+    }
+
+    /**
+     * Is there a {@link PropertiesFunction} with the given name?
+     *
+     * @deprecated use hasPropertiesFunction
+     */
+    @Deprecated
+    public boolean hasFunction(String name) {
+        return hasPropertiesFunction(name);
     }
 
     @ManagedAttribute(description = "System properties mode")
@@ -659,8 +631,7 @@ public class PropertiesComponent extends ServiceSupport
     @Override
     public void addPropertiesSource(PropertiesSource propertiesSource) {
         CamelContextAware.trySetCamelContext(propertiesSource, getCamelContext());
-        lock.lock();
-        try {
+        synchronized (lock) {
             sources.add(propertiesSource);
             // resort after we add a new source
             sources.sort(OrderedComparator.get());
@@ -671,8 +642,6 @@ public class PropertiesComponent extends ServiceSupport
             if (isStarted()) {
                 ServiceHelper.startService(propertiesSource);
             }
-        } finally {
-            lock.unlock();
         }
     }
 
@@ -720,7 +689,9 @@ public class PropertiesComponent extends ServiceSupport
 
         // find sources with this location to reload
         for (PropertiesSource source : sources) {
-            if (source instanceof LocationPropertiesSource loc && source instanceof LoadablePropertiesSource loadable) {
+            if (source instanceof LocationPropertiesSource && source instanceof LoadablePropertiesSource) {
+                LocationPropertiesSource loc = (LocationPropertiesSource) source;
+                LoadablePropertiesSource loadable = (LoadablePropertiesSource) source;
                 String schemeAndPath = loc.getLocation().getResolver() + ":" + loc.getLocation().getPath();
                 String path = loc.getLocation().getPath();
                 if (PatternHelper.matchPattern(schemeAndPath, pattern) || PatternHelper.matchPattern(path, pattern)) {
@@ -731,18 +702,6 @@ public class PropertiesComponent extends ServiceSupport
             }
         }
         return answer;
-    }
-
-    @Override
-    public void keepOnlyChangeProperties(Properties properties) {
-        Properties loaded = loadProperties();
-        for (String key : loaded.stringPropertyNames()) {
-            Object v1 = loaded.getProperty(key);
-            Object v2 = properties.getProperty(key);
-            if (Objects.equals(v1, v2)) {
-                properties.remove(key);
-            }
-        }
     }
 
     @Override
@@ -764,8 +723,8 @@ public class PropertiesComponent extends ServiceSupport
         }
 
         // inject the component to the parser
-        if (propertiesParser instanceof DefaultPropertiesParser defaultPropertiesParser) {
-            defaultPropertiesParser.setPropertiesComponent(this);
+        if (propertiesParser instanceof DefaultPropertiesParser) {
+            ((DefaultPropertiesParser) propertiesParser).setPropertiesComponent(this);
         }
 
         if (isAutoDiscoverPropertiesSources()) {
@@ -776,12 +735,13 @@ public class PropertiesComponent extends ServiceSupport
                     LOG.debug("PropertiesComponent added custom PropertiesSource (registry): {}", source);
                 }
 
-                FactoryFinder factoryFinder = getCamelContext().getCamelContextExtension()
+                FactoryFinder factoryFinder = getCamelContext().adapt(ExtendedCamelContext.class)
                         .getBootstrapFactoryFinder();
                 Class<?> type = factoryFinder.findClass("properties-source-factory").orElse(null);
                 if (type != null) {
                     Object obj = getCamelContext().getInjector().newInstance(type, false);
-                    if (obj instanceof PropertiesSource ps) {
+                    if (obj instanceof PropertiesSource) {
+                        PropertiesSource ps = (PropertiesSource) obj;
                         addPropertiesSource(ps);
                         LOG.debug("PropertiesComponent added custom PropertiesSource (factory): {}", ps);
                     } else if (obj != null) {
@@ -797,36 +757,36 @@ public class PropertiesComponent extends ServiceSupport
         }
 
         sources.sort(OrderedComparator.get());
-        ServiceHelper.initService(sources, propertiesFunctionResolver, defaultPropertiesLookupListener);
+        ServiceHelper.initService(sources, propertiesFunctionResolver);
     }
 
     @Override
     protected void doBuild() throws Exception {
-        ServiceHelper.buildService(sources, propertiesFunctionResolver, defaultPropertiesLookupListener);
+        ServiceHelper.buildService(sources, propertiesFunctionResolver);
     }
 
     @Override
     protected void doStart() throws Exception {
-        ServiceHelper.startService(sources, propertiesFunctionResolver, defaultPropertiesLookupListener);
+        ServiceHelper.startService(sources, propertiesFunctionResolver);
     }
 
     @Override
     protected void doStop() throws Exception {
-        ServiceHelper.stopService(sources, propertiesFunctionResolver, defaultPropertiesLookupListener);
+        ServiceHelper.stopService(sources, propertiesFunctionResolver);
     }
 
     @Override
     protected void doShutdown() throws Exception {
-        ServiceHelper.stopAndShutdownServices(sources, propertiesFunctionResolver, defaultPropertiesLookupListener);
+        ServiceHelper.stopAndShutdownServices(sources, propertiesFunctionResolver);
     }
 
-    private void addPropertiesLocationsAsPropertiesSource(PropertiesLocation location, int order) {
+    private void addPropertiesLocationsAsPropertiesSource(PropertiesLocation location) {
         if ("ref".equals(location.getResolver())) {
-            addPropertiesSource(new RefPropertiesSource(this, location, order));
+            addPropertiesSource(new RefPropertiesSource(this, location));
         } else if ("file".equals(location.getResolver())) {
-            addPropertiesSource(new FilePropertiesSource(this, location, order));
+            addPropertiesSource(new FilePropertiesSource(this, location));
         } else if ("classpath".equals(location.getResolver())) {
-            addPropertiesSource(new ClasspathPropertiesSource(this, location, order));
+            addPropertiesSource(new ClasspathPropertiesSource(this, location));
         }
     }
 
