@@ -19,6 +19,7 @@ package org.apache.camel.impl.health;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.CamelContextAware;
@@ -31,13 +32,12 @@ import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ReadinessAndLivenessTest {
 
     @Test
-    public void testLiveAndReady() {
+    public void testLiveAndReady() throws Exception {
         CamelContext context = new DefaultCamelContext();
 
         HealthCheckRegistry registry = new DefaultHealthCheckRegistry();
@@ -49,7 +49,7 @@ public class ReadinessAndLivenessTest {
         context.start();
         registry.start();
 
-        List<HealthCheck> checks = registry.stream().toList();
+        List<HealthCheck> checks = registry.stream().collect(Collectors.toList());
         assertEquals(2, checks.size());
 
         Collection<HealthCheck.Result> results = HealthCheckHelper.invokeReadiness(context);
@@ -58,7 +58,7 @@ public class ReadinessAndLivenessTest {
         assertEquals(HealthCheck.State.UP, result.getState());
         assertFalse(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
-        assertInstanceOf(MyReadyCheck.class, result.getCheck());
+        assertTrue(result.getCheck() instanceof MyReadyCheck);
 
         results = HealthCheckHelper.invokeLiveness(context);
         assertEquals(1, results.size());
@@ -66,11 +66,11 @@ public class ReadinessAndLivenessTest {
         assertEquals(HealthCheck.State.DOWN, result.getState());
         assertTrue(result.getCheck().isLiveness());
         assertFalse(result.getCheck().isReadiness());
-        assertInstanceOf(MyLiveCheck.class, result.getCheck());
+        assertTrue(result.getCheck() instanceof MyLiveCheck);
     }
 
     @Test
-    public void testAll() {
+    public void testAll() throws Exception {
         CamelContext context = new DefaultCamelContext();
 
         HealthCheckRegistry registry = new DefaultHealthCheckRegistry();
@@ -81,7 +81,7 @@ public class ReadinessAndLivenessTest {
         context.start();
         registry.start();
 
-        List<HealthCheck> checks = registry.stream().toList();
+        List<HealthCheck> checks = registry.stream().collect(Collectors.toList());
         assertEquals(1, checks.size());
 
         Collection<HealthCheck.Result> results = HealthCheckHelper.invokeReadiness(context);
@@ -91,7 +91,7 @@ public class ReadinessAndLivenessTest {
         assertEquals("READINESS", result.getMessage().get());
         assertTrue(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
-        assertInstanceOf(MyAllCheck.class, result.getCheck());
+        assertTrue(result.getCheck() instanceof MyAllCheck);
 
         results = HealthCheckHelper.invokeLiveness(context);
         assertEquals(1, results.size());
@@ -100,18 +100,13 @@ public class ReadinessAndLivenessTest {
         assertTrue(result.getCheck().isLiveness());
         assertTrue(result.getCheck().isReadiness());
         assertEquals("LIVENESS", result.getMessage().get());
-        assertInstanceOf(MyAllCheck.class, result.getCheck());
+        assertTrue(result.getCheck() instanceof MyAllCheck);
     }
 
     private static class MyReadyCheck extends AbstractHealthCheck implements CamelContextAware {
 
         protected MyReadyCheck(String group, String id) {
             super(group, id);
-        }
-
-        @Override
-        public boolean isReadiness() {
-            return true;
         }
 
         @Override
@@ -138,11 +133,6 @@ public class ReadinessAndLivenessTest {
         }
 
         @Override
-        public boolean isLiveness() {
-            return true;
-        }
-
-        @Override
         public void doCall(HealthCheckResultBuilder builder, Map<String, Object> options) {
             builder.down();
         }
@@ -153,16 +143,6 @@ public class ReadinessAndLivenessTest {
 
         protected MyAllCheck(String group, String id) {
             super(group, id);
-        }
-
-        @Override
-        public boolean isReadiness() {
-            return true;
-        }
-
-        @Override
-        public boolean isLiveness() {
-            return true;
         }
 
         @Override
