@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,19 +30,16 @@ import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.jspecify.annotations.Nullable;
 import org.yaml.snakeyaml.DumperOptions;
 import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
-import org.yaml.snakeyaml.composer.ComposerException;
 import org.yaml.snakeyaml.constructor.Constructor;
-import org.yaml.snakeyaml.inspector.TagInspector;
-import org.yaml.snakeyaml.nodes.Tag;
 import org.yaml.snakeyaml.reader.UnicodeReader;
 import org.yaml.snakeyaml.representer.Representer;
 
 import org.springframework.core.CollectionFactory;
 import org.springframework.core.io.Resource;
+import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
@@ -50,7 +47,7 @@ import org.springframework.util.StringUtils;
 /**
  * Base class for YAML factories.
  *
- * <p>Requires SnakeYAML 2.0 or higher, as of Spring Framework 6.1.
+ * <p>Requires SnakeYAML 1.18 or higher, as of Spring Framework 5.0.6.
  *
  * @author Dave Syer
  * @author Juergen Hoeller
@@ -77,7 +74,7 @@ public abstract class YamlProcessor {
 	 * A map of document matchers allowing callers to selectively use only
 	 * some of the documents in a YAML resource. In YAML documents are
 	 * separated by {@code ---} lines, and each document is converted
-	 * to properties before the match is made. For example,
+	 * to properties before the match is made. E.g.
 	 * <pre class="code">
 	 * environment: dev
 	 * url: https://dev.bar.com
@@ -89,7 +86,7 @@ public abstract class YamlProcessor {
 	 * </pre>
 	 * when mapped with
 	 * <pre class="code">
-	 * setDocumentMatchers(properties -&gt;
+	 * setDocumentMatchers(properties ->
 	 *     ("prod".equals(properties.getProperty("environment")) ? MatchStatus.FOUND : MatchStatus.NOT_FOUND));
 	 * </pre>
 	 * would end up as
@@ -100,7 +97,7 @@ public abstract class YamlProcessor {
 	 * </pre>
 	 */
 	public void setDocumentMatchers(DocumentMatcher... matchers) {
-		this.documentMatchers = List.of(matchers);
+		this.documentMatchers = Arrays.asList(matchers);
 	}
 
 	/**
@@ -135,7 +132,7 @@ public abstract class YamlProcessor {
 	 * <p>If no supported types are configured, only Java standard classes
 	 * (as defined in {@link org.yaml.snakeyaml.constructor.SafeConstructor})
 	 * encountered in YAML documents will be supported.
-	 * If an unsupported type is encountered, a {@link ComposerException}
+	 * If an unsupported type is encountered, an {@link IllegalStateException}
 	 * will be thrown when the corresponding YAML node is processed.
 	 * @param supportedTypes the supported types, or an empty array to clear the
 	 * supported types
@@ -149,7 +146,7 @@ public abstract class YamlProcessor {
 		else {
 			Assert.noNullElements(supportedTypes, "'supportedTypes' must not contain null elements");
 			this.supportedTypes = Arrays.stream(supportedTypes).map(Class::getName)
-					.collect(Collectors.toUnmodifiableSet());
+					.collect(Collectors.collectingAndThen(Collectors.toSet(), Collections::unmodifiableSet));
 		}
 	}
 
@@ -158,7 +155,7 @@ public abstract class YamlProcessor {
 	 * resources. Each resource is parsed in turn and the documents inside checked against
 	 * the {@link #setDocumentMatchers(DocumentMatcher...) matchers}. If a document
 	 * matches it is passed into the callback, along with its representation as Properties.
-	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all the
+	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all of the
 	 * documents will be parsed.
 	 * @param callback a callback to delegate to once matching documents are found
 	 * @see #createYaml()
@@ -176,21 +173,19 @@ public abstract class YamlProcessor {
 	/**
 	 * Create the {@link Yaml} instance to use.
 	 * <p>The default implementation sets the "allowDuplicateKeys" flag to {@code false},
-	 * enabling built-in duplicate key handling.
-	 * <p>If custom {@linkplain #setSupportedTypes supported types} have been configured,
-	 * the default implementation creates a {@code Yaml} instance that filters out
-	 * unsupported types encountered in YAML documents.
-	 * If an unsupported type is encountered, a {@link ComposerException} will be
-	 * thrown when the node is processed.
+	 * enabling built-in duplicate key handling in SnakeYAML 1.18+.
+	 * <p>As of Spring Framework 5.1.16, if custom {@linkplain #setSupportedTypes
+	 * supported types} have been configured, the default implementation creates
+	 * a {@code Yaml} instance that filters out unsupported types encountered in
+	 * YAML documents. If an unsupported type is encountered, an
+	 * {@link IllegalStateException} will be thrown when the node is processed.
 	 * @see LoaderOptions#setAllowDuplicateKeys(boolean)
 	 */
 	protected Yaml createYaml() {
 		LoaderOptions loaderOptions = new LoaderOptions();
 		loaderOptions.setAllowDuplicateKeys(false);
-		loaderOptions.setTagInspector(new SupportedTagInspector());
-		DumperOptions dumperOptions = new DumperOptions();
-		return new Yaml(new Constructor(loaderOptions), new Representer(dumperOptions),
-				dumperOptions, loaderOptions);
+		return new Yaml(new FilteringConstructor(loaderOptions), new Representer(),
+				new DumperOptions(), loaderOptions);
 	}
 
 	private boolean process(MatchCallback callback, Yaml yaml, Resource resource) {
@@ -230,16 +225,17 @@ public abstract class YamlProcessor {
 		}
 	}
 
-	@SuppressWarnings({"rawtypes", "unchecked"})
+	@SuppressWarnings("unchecked")
 	private Map<String, Object> asMap(Object object) {
 		// YAML can have numbers as keys
 		Map<String, Object> result = new LinkedHashMap<>();
-		if (!(object instanceof Map map)) {
+		if (!(object instanceof Map)) {
 			// A document can be a text literal
 			result.put("document", object);
 			return result;
 		}
 
+		Map<Object, Object> map = (Map<Object, Object>) object;
 		map.forEach((key, value) -> {
 			if (value instanceof Map) {
 				value = asMap(value);
@@ -309,7 +305,6 @@ public abstract class YamlProcessor {
 		return result;
 	}
 
-	@SuppressWarnings({"rawtypes", "unchecked"})
 	private void buildFlattenedMap(Map<String, Object> result, Map<String, Object> source, @Nullable String path) {
 		source.forEach((key, value) -> {
 			if (StringUtils.hasText(path)) {
@@ -323,12 +318,16 @@ public abstract class YamlProcessor {
 			if (value instanceof String) {
 				result.put(key, value);
 			}
-			else if (value instanceof Map map) {
+			else if (value instanceof Map) {
 				// Need a compound key
+				@SuppressWarnings("unchecked")
+				Map<String, Object> map = (Map<String, Object>) value;
 				buildFlattenedMap(result, map, key);
 			}
-			else if (value instanceof Collection collection) {
+			else if (value instanceof Collection) {
 				// Need a compound key
+				@SuppressWarnings("unchecked")
+				Collection<Object> collection = (Collection<Object>) value;
 				if (collection.isEmpty()) {
 					result.put(key, "");
 				}
@@ -429,11 +428,23 @@ public abstract class YamlProcessor {
 		FIRST_FOUND
 	}
 
-	private class SupportedTagInspector implements TagInspector {
+
+	/**
+	 * {@link Constructor} that supports filtering of unsupported types.
+	 * <p>If an unsupported type is encountered in a YAML document, an
+	 * {@link IllegalStateException} will be thrown from {@link #getClassForName}.
+	 */
+	private class FilteringConstructor extends Constructor {
+
+		FilteringConstructor(LoaderOptions loaderOptions) {
+			super(loaderOptions);
+		}
 
 		@Override
-		public boolean isGlobalTagAllowed(Tag tag) {
-			return supportedTypes.contains(tag.getClassName());
+		protected Class<?> getClassForName(String name) throws ClassNotFoundException {
+			Assert.state(YamlProcessor.this.supportedTypes.contains(name),
+					() -> "Unsupported type encountered in YAML document: " + name);
+			return super.getClassForName(name);
 		}
 	}
 
