@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,13 +17,14 @@
 package org.springframework.core.convert.support;
 
 import java.nio.ByteBuffer;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
-
-import org.jspecify.annotations.Nullable;
 
 import org.springframework.core.convert.ConversionService;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.converter.ConditionalGenericConverter;
+import org.springframework.lang.Nullable;
 
 /**
  * Converts a {@link ByteBuffer} directly to and from {@code byte[] ByteBuffer} directly to and from {@code byte[]s} and indirectly
@@ -39,11 +40,17 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 
 	private static final TypeDescriptor BYTE_ARRAY_TYPE = TypeDescriptor.valueOf(byte[].class);
 
-	private static final Set<ConvertiblePair> CONVERTIBLE_PAIRS = Set.of(
-				new ConvertiblePair(ByteBuffer.class, byte[].class),
-				new ConvertiblePair(byte[].class, ByteBuffer.class),
-				new ConvertiblePair(ByteBuffer.class, Object.class),
-				new ConvertiblePair(Object.class, ByteBuffer.class));
+	private static final Set<ConvertiblePair> CONVERTIBLE_PAIRS;
+
+	static {
+		Set<ConvertiblePair> convertiblePairs = new HashSet<>(4);
+		convertiblePairs.add(new ConvertiblePair(ByteBuffer.class, byte[].class));
+		convertiblePairs.add(new ConvertiblePair(byte[].class, ByteBuffer.class));
+		convertiblePairs.add(new ConvertiblePair(ByteBuffer.class, Object.class));
+		convertiblePairs.add(new ConvertiblePair(Object.class, ByteBuffer.class));
+		CONVERTIBLE_PAIRS = Collections.unmodifiableSet(convertiblePairs);
+	}
+
 
 	private final ConversionService conversionService;
 
@@ -78,9 +85,11 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 	}
 
 	@Override
-	public @Nullable Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+	@Nullable
+	public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 		boolean byteBufferTarget = targetType.isAssignableTo(BYTE_BUFFER_TYPE);
-		if (source instanceof ByteBuffer buffer) {
+		if (source instanceof ByteBuffer) {
+			ByteBuffer buffer = (ByteBuffer) source;
 			return (byteBufferTarget ? buffer.duplicate() : convertFromByteBuffer(buffer, targetType));
 		}
 		if (byteBufferTarget) {
@@ -90,7 +99,8 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 		throw new IllegalStateException("Unexpected source/target types");
 	}
 
-	private @Nullable Object convertFromByteBuffer(ByteBuffer source, TypeDescriptor targetType) {
+	@Nullable
+	private Object convertFromByteBuffer(ByteBuffer source, TypeDescriptor targetType) {
 		byte[] bytes = new byte[source.remaining()];
 		source.get(bytes);
 
