@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.expression.spel.ast;
 
 import java.util.Arrays;
-import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -28,17 +27,17 @@ import static org.assertj.core.api.Assertions.assertThat;
 /**
  * @author Andy Wilkinson
  */
-class FormatHelperTests {
+public class FormatHelperTests {
 
 	@Test
-	void formatMethodWithSingleArgumentForMessage() {
-		String message = FormatHelper.formatMethodForMessage("foo", List.of(TypeDescriptor.forObject("a string")));
+	public void formatMethodWithSingleArgumentForMessage() {
+		String message = FormatHelper.formatMethodForMessage("foo", Arrays.asList(TypeDescriptor.forObject("a string")));
 		assertThat(message).isEqualTo("foo(java.lang.String)");
 	}
 
 	@Test
-	void formatMethodWithMultipleArgumentsForMessage() {
-		String message = FormatHelper.formatMethodForMessage("foo", Arrays.asList(TypeDescriptor.forObject("a string"), TypeDescriptor.forObject(5)));
+	public void formatMethodWithMultipleArgumentsForMessage() {
+		String message = FormatHelper.formatMethodForMessage("foo", Arrays.asList(TypeDescriptor.forObject("a string"), TypeDescriptor.forObject(Integer.valueOf(5))));
 		assertThat(message).isEqualTo("foo(java.lang.String,java.lang.Integer)");
 	}
 
