@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,17 +21,16 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.Iterator;
-import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.tomcat.util.buf.MessageBytes;
 import org.apache.tomcat.util.http.MimeHeaders;
-import org.jspecify.annotations.Nullable;
 
 import org.springframework.http.HttpHeaders;
+import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.MultiValueMap;
 
@@ -39,8 +38,6 @@ import org.springframework.util.MultiValueMap;
  * {@code MultiValueMap} implementation for wrapping Tomcat HTTP headers.
  *
  * @author Brian Clozel
- * @author Sam Brannen
- * @author Simon Baslé
  * @since 5.1.1
  */
 class TomcatHeadersAdapter implements MultiValueMap<String, String> {
@@ -93,11 +90,12 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 	@Override
 	public int size() {
 		Enumeration<String> names = this.headers.names();
-		Set<String> deduplicated = new LinkedHashSet<>();
+		int size = 0;
 		while (names.hasMoreElements()) {
-			deduplicated.add(names.nextElement().toLowerCase(Locale.ROOT));
+			size++;
+			names.nextElement();
 		}
-		return deduplicated.size();
+		return size;
 	}
 
 	@Override
@@ -107,19 +105,19 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public boolean containsKey(Object key) {
-		if (key instanceof String headerName) {
-			return (this.headers.findHeader(headerName, 0) != -1);
+		if (key instanceof String) {
+			return (this.headers.findHeader((String) key, 0) != -1);
 		}
 		return false;
 	}
 
 	@Override
 	public boolean containsValue(Object value) {
-		if (value instanceof String text) {
-			MessageBytes messageBytes = MessageBytes.newInstance();
-			messageBytes.setString(text);
+		if (value instanceof String) {
+			MessageBytes needle = MessageBytes.newInstance();
+			needle.setString((String) value);
 			for (int i = 0; i < this.headers.size(); i++) {
-				if (this.headers.getValue(i).equals(messageBytes)) {
+				if (this.headers.getValue(i).equals(needle)) {
 					return true;
 				}
 			}
@@ -128,7 +126,8 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 	}
 
 	@Override
-	public @Nullable List<String> get(Object key) {
+	@Nullable
+	public List<String> get(Object key) {
 		if (containsKey(key)) {
 			return Collections.list(this.headers.values((String) key));
 		}
@@ -136,7 +135,8 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 	}
 
 	@Override
-	public @Nullable List<String> put(String key, List<String> value) {
+	@Nullable
+	public List<String> put(String key, List<String> value) {
 		List<String> previousValues = get(key);
 		this.headers.removeHeader(key);
 		value.forEach(v -> this.headers.addValue(key).setString(v));
@@ -144,10 +144,11 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 	}
 
 	@Override
-	public @Nullable List<String> remove(Object key) {
-		if (key instanceof String headerName) {
+	@Nullable
+	public List<String> remove(Object key) {
+		if (key instanceof String) {
 			List<String> previousValues = get(key);
-			this.headers.removeHeader(headerName);
+			this.headers.removeHeader((String) key);
 			return previousValues;
 		}
 		return null;
@@ -160,7 +161,7 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public void clear() {
-		this.headers.recycle();
+		this.headers.clear();
 	}
 
 	@Override
@@ -170,12 +171,12 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public Collection<List<String>> values() {
-		return keySet().stream().map(this::get).toList();
+		return keySet().stream().map(this::get).collect(Collectors.toList());
 	}
 
 	@Override
 	public Set<Entry<String, List<String>>> entrySet() {
-		return new AbstractSet<>() {
+		return new AbstractSet<Entry<String, List<String>>>() {
 			@Override
 			public Iterator<Entry<String, List<String>>> iterator() {
 				return new EntryIterator();
@@ -183,7 +184,7 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 			@Override
 			public int size() {
-				return TomcatHeadersAdapter.this.size();
+				return headers.size();
 			}
 		};
 	}
@@ -197,7 +198,7 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	private class EntryIterator implements Iterator<Entry<String, List<String>>> {
 
-		private final Enumeration<String> names = headers.names();
+		private Enumeration<String> names = headers.names();
 
 		@Override
 		public boolean hasNext() {
@@ -224,13 +225,15 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 			return this.key;
 		}
 
+		@Nullable
 		@Override
-		public @Nullable List<String> getValue() {
+		public List<String> getValue() {
 			return get(this.key);
 		}
 
+		@Nullable
 		@Override
-		public @Nullable List<String> setValue(List<String> value) {
+		public List<String> setValue(List<String> value) {
 			List<String> previous = getValue();
 			headers.removeHeader(this.key);
 			addAll(this.key, value);
@@ -262,7 +265,8 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 		private final Enumeration<String> enumeration;
 
-		private @Nullable String currentName;
+		@Nullable
+		private String currentName;
 
 		private HeaderNamesIterator(Enumeration<String> enumeration) {
 			this.enumeration = enumeration;
@@ -284,17 +288,11 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 			if (this.currentName == null) {
 				throw new IllegalStateException("No current Header in iterator");
 			}
-			//implement a mix of removeHeader(String) and removeHeader(int)
-			boolean found = false;
-			for (int i = 0; i < headers.size(); i++) {
-				if (headers.getName(i).equalsIgnoreCase(this.currentName)) {
-					headers.removeHeader(i--);
-					found = true;
-				}
-			}
-			if (!found) {
+			int index = headers.findHeader(this.currentName, 0);
+			if (index == -1) {
 				throw new IllegalStateException("Header not present: " + this.currentName);
 			}
+			headers.removeHeader(index);
 		}
 	}
 
