@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,16 +22,15 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Collection;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.function.BiFunction;
 import java.util.function.UnaryOperator;
 
-import org.jspecify.annotations.Nullable;
-
+import org.springframework.lang.NonNull;
+import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.LinkedMultiValueMap;
@@ -47,7 +46,6 @@ import org.springframework.util.StringUtils;
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
  * @author Phillip Webb
- * @author Sam Brannen
  * @since 3.1.3
  * @see <a href="https://tools.ietf.org/html/rfc3986#section-1.2.3">Hierarchical URIs</a>
  */
@@ -99,11 +97,14 @@ final class HierarchicalUriComponents extends UriComponents {
 	};
 
 
-	private final @Nullable String userInfo;
+	@Nullable
+	private final String userInfo;
 
-	private final @Nullable String host;
+	@Nullable
+	private final String host;
 
-	private final @Nullable String port;
+	@Nullable
+	private final String port;
 
 	private final PathComponent path;
 
@@ -111,7 +112,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 	private final EncodeState encodeState;
 
-	private @Nullable UnaryOperator<String> variableEncoder;
+	@Nullable
+	private UnaryOperator<String> variableEncoder;
 
 
 	/**
@@ -164,17 +166,20 @@ final class HierarchicalUriComponents extends UriComponents {
 	// Component getters
 
 	@Override
-	public @Nullable String getSchemeSpecificPart() {
+	@Nullable
+	public String getSchemeSpecificPart() {
 		return null;
 	}
 
 	@Override
-	public @Nullable String getUserInfo() {
+	@Nullable
+	public String getUserInfo() {
 		return this.userInfo;
 	}
 
 	@Override
-	public @Nullable String getHost() {
+	@Nullable
+	public String getHost() {
 		return this.host;
 	}
 
@@ -187,15 +192,11 @@ final class HierarchicalUriComponents extends UriComponents {
 			throw new IllegalStateException(
 					"The port contains a URI variable but has not been expanded yet: " + this.port);
 		}
-		try {
-			return Integer.parseInt(this.port);
-		}
-		catch (NumberFormatException ex) {
-			throw new IllegalStateException("The port must be an integer: " + this.port);
-		}
+		return Integer.parseInt(this.port);
 	}
 
 	@Override
+	@NonNull
 	public String getPath() {
 		return this.path.getPath();
 	}
@@ -206,7 +207,8 @@ final class HierarchicalUriComponents extends UriComponents {
 	}
 
 	@Override
-	public @Nullable String getQuery() {
+	@Nullable
+	public String getQuery() {
 		if (!this.queryParams.isEmpty()) {
 			StringBuilder queryBuilder = new StringBuilder();
 			this.queryParams.forEach((name, values) -> {
@@ -443,10 +445,11 @@ final class HierarchicalUriComponents extends UriComponents {
 		UriTemplateVariables queryVariables = new QueryUriTemplateVariables(variables);
 		this.queryParams.forEach((key, values) -> {
 			String name = expandUriComponent(key, queryVariables, this.variableEncoder);
-			List<String> expandedValues = result.computeIfAbsent(name, k -> new ArrayList<>(values.size()));
+			List<String> expandedValues = new ArrayList<>(values.size());
 			for (String value : values) {
 				expandedValues.add(expandUriComponent(value, queryVariables, this.variableEncoder));
 			}
+			result.put(name, expandedValues);
 		});
 		return CollectionUtils.unmodifiableMultiValueMap(result);
 	}
@@ -476,7 +479,7 @@ final class HierarchicalUriComponents extends UriComponents {
 			if (this.host != null) {
 				uriBuilder.append(this.host);
 			}
-			if (StringUtils.hasText(this.port) && !this.port.equals("-1")) {
+			if (getPort() != -1) {
 				uriBuilder.append(':').append(this.port);
 			}
 		}
@@ -530,7 +533,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		if (getHost() != null) {
 			builder.host(getHost());
 		}
-		// Avoid parsing the port, may have URI variable.
+		// Avoid parsing the port, may have URI variable..
 		if (this.port != null) {
 			builder.port(this.port);
 		}
@@ -546,20 +549,32 @@ final class HierarchicalUriComponents extends UriComponents {
 
 	@Override
 	public boolean equals(@Nullable Object other) {
-		return (this == other || (other instanceof HierarchicalUriComponents that &&
-				ObjectUtils.nullSafeEquals(getScheme(), that.getScheme()) &&
-				ObjectUtils.nullSafeEquals(getUserInfo(), that.getUserInfo()) &&
-				ObjectUtils.nullSafeEquals(getHost(), that.getHost()) &&
-				getPort() == that.getPort() &&
-				this.path.equals(that.path) &&
-				this.queryParams.equals(that.queryParams) &&
-				ObjectUtils.nullSafeEquals(getFragment(), that.getFragment())));
+		if (this == other) {
+			return true;
+		}
+		if (!(other instanceof HierarchicalUriComponents)) {
+			return false;
+		}
+		HierarchicalUriComponents otherComp = (HierarchicalUriComponents) other;
+		return (ObjectUtils.nullSafeEquals(getScheme(), otherComp.getScheme()) &&
+				ObjectUtils.nullSafeEquals(getUserInfo(), otherComp.getUserInfo()) &&
+				ObjectUtils.nullSafeEquals(getHost(), otherComp.getHost()) &&
+				getPort() == otherComp.getPort() &&
+				this.path.equals(otherComp.path) &&
+				this.queryParams.equals(otherComp.queryParams) &&
+				ObjectUtils.nullSafeEquals(getFragment(), otherComp.getFragment()));
 	}
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(getScheme(), this.userInfo, this.host, this.port,
-				this.path, this.queryParams, getFragment());
+		int result = ObjectUtils.nullSafeHashCode(getScheme());
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.userInfo);
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.host);
+		result = 31 * result + ObjectUtils.nullSafeHashCode(this.port);
+		result = 31 * result + this.path.hashCode();
+		result = 31 * result + this.queryParams.hashCode();
+		result = 31 * result + ObjectUtils.nullSafeHashCode(getFragment());
+		return result;
 	}
 
 
@@ -581,25 +596,25 @@ final class HierarchicalUriComponents extends UriComponents {
 		AUTHORITY {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c;
 			}
 		},
 		USER_INFO {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || ':' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || ':' == c;
 			}
 		},
 		HOST_IPV4 {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreservedOrSubDelimiter(c);
+				return isUnreserved(c) || isSubDelimiter(c);
 			}
 		},
 		HOST_IPV6 {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isUnreservedOrSubDelimiter(c) || '[' == c || ']' == c || ':' == c);
+				return isUnreserved(c) || isSubDelimiter(c) || '[' == c || ']' == c || ':' == c;
 			}
 		},
 		PORT {
@@ -611,7 +626,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		PATH {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c);
+				return isPchar(c) || '/' == c;
 			}
 		},
 		PATH_SEGMENT {
@@ -623,7 +638,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		QUERY {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c || '?' == c);
+				return isPchar(c) || '/' == c || '?' == c;
 			}
 		},
 		QUERY_PARAM {
@@ -633,14 +648,14 @@ final class HierarchicalUriComponents extends UriComponents {
 					return false;
 				}
 				else {
-					return (isPchar(c) || '/' == c || '?' == c);
+					return isPchar(c) || '/' == c || '?' == c;
 				}
 			}
 		},
 		FRAGMENT {
 			@Override
 			public boolean isAllowed(int c) {
-				return (isPchar(c) || '/' == c || '?' == c);
+				return isPchar(c) || '/' == c || '?' == c;
 			}
 		},
 		URI {
@@ -649,15 +664,6 @@ final class HierarchicalUriComponents extends UriComponents {
 				return isUnreserved(c);
 			}
 		};
-
-		private static final boolean[] unreservedOrSubDelimiterArray = new boolean[128];
-
-		static {
-			for (int i = 0; i < 128; i++) {
-				char c = (char) i;
-				unreservedOrSubDelimiterArray[i] = (URI.isUnreserved(c) || URI.isSubDelimiter(c));
-			}
-		}
 
 		/**
 		 * Indicates whether the given character is allowed in this URI component.
@@ -694,8 +700,8 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isSubDelimiter(int c) {
-			return ('!' == c || '$' == c || '&' == c || '\'' == c ||
-					'(' == c || ')' == c || '*' == c || '+' == c || ',' == c || ';' == c || '=' == c);
+			return ('!' == c || '$' == c || '&' == c || '\'' == c || '(' == c || ')' == c || '*' == c || '+' == c ||
+					',' == c || ';' == c || '=' == c);
 		}
 
 		/**
@@ -719,16 +725,8 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isPchar(int c) {
-			return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
+			return (isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c);
 		}
-
-		/**
-		 * Combined check whether a character is unreserved or a sub-delimiter.
-		 */
-		protected boolean isUnreservedOrSubDelimiter(int c) {
-			return (c < unreservedOrSubDelimiterArray.length && c >= 0 && unreservedOrSubDelimiterArray[c]);
-		}
-
 	}
 
 
@@ -759,7 +757,7 @@ final class HierarchicalUriComponents extends UriComponents {
 	}
 
 
-	private static class UriTemplateEncoder implements BiFunction<String, Type, String> {
+	private static class UriTemplateEncoder	implements BiFunction<String, Type, String> {
 
 		private final Charset charset;
 
@@ -830,7 +828,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		 * Whether the given String is a single URI variable that can be
 		 * expanded. It must have '{' and '}' surrounding non-empty text and no
 		 * nested placeholders unless it is a variable with regex syntax,
-		 * for example, {@code "/{year:\d{1,4}}"}.
+		 * e.g. {@code "/{year:\d{1,4}}"}.
 		 */
 		private boolean isUriVariable(CharSequence source) {
 			if (source.length() < 2 || source.charAt(0) != '{' || source.charAt(source.length() -1) != '}') {
@@ -900,7 +898,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		@Override
 		public List<String> getPathSegments() {
 			String[] segments = StringUtils.tokenizeToStringArray(getPath(), PATH_DELIMITER_STRING);
-			return List.of(segments);
+			return Collections.unmodifiableList(Arrays.asList(segments));
 		}
 
 		@Override
@@ -927,8 +925,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof FullPathComponent fullPathComponent &&
-					getPath().equals(fullPathComponent.getPath())));
+			return (this == other || (other instanceof FullPathComponent &&
+					getPath().equals(((FullPathComponent) other).getPath())));
 		}
 
 		@Override
@@ -947,7 +945,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		public PathSegmentComponent(List<String> pathSegments) {
 			Assert.notNull(pathSegments, "List must not be null");
-			this.pathSegments = List.copyOf(pathSegments);
+			this.pathSegments = Collections.unmodifiableList(new ArrayList<>(pathSegments));
 		}
 
 		@Override
@@ -1001,8 +999,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof PathSegmentComponent pathSegmentComponent &&
-					getPathSegments().equals(pathSegmentComponent.getPathSegments())));
+			return (this == other || (other instanceof PathSegmentComponent &&
+					getPathSegments().equals(((PathSegmentComponent) other).getPathSegments())));
 		}
 
 		@Override
@@ -1085,13 +1083,10 @@ final class HierarchicalUriComponents extends UriComponents {
 		}
 
 		@Override
-		public @Nullable Object getValue(@Nullable String name) {
+		public Object getValue(@Nullable String name) {
 			Object value = this.delegate.getValue(name);
 			if (ObjectUtils.isArray(value)) {
 				value = StringUtils.arrayToCommaDelimitedString(ObjectUtils.toObjectArray(value));
-			}
-			else if (value instanceof Collection<?> collection) {
-				value = StringUtils.collectionToCommaDelimitedString(collection);
 			}
 			return value;
 		}
