@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,22 +17,18 @@
 package org.springframework.web.client;
 
 import java.io.ByteArrayInputStream;
-import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.http.converter.HttpMessageConverter;
-import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -40,57 +36,58 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 
 /**
- * Unit tests for {@link ExtractingResponseErrorHandler}.
- *
  * @author Arjen Poutsma
  */
-@SuppressWarnings("ALL")
-class ExtractingResponseErrorHandlerTests {
+public class ExtractingResponseErrorHandlerTests {
 
 	private ExtractingResponseErrorHandler errorHandler;
 
-	private final ClientHttpResponse response = mock();
+	private final ClientHttpResponse response = mock(ClientHttpResponse.class);
 
 
 	@BeforeEach
-	void setup() {
-		HttpMessageConverter<Object> converter = new JacksonJsonHttpMessageConverter();
-		this.errorHandler = new ExtractingResponseErrorHandler(List.of(converter));
+	public void setup() {
+		HttpMessageConverter<Object> converter = new MappingJackson2HttpMessageConverter();
+		this.errorHandler = new ExtractingResponseErrorHandler(
+				Collections.singletonList(converter));
 
-		this.errorHandler.setStatusMapping(Map.of(HttpStatus.I_AM_A_TEAPOT, MyRestClientException.class));
-		this.errorHandler.setSeriesMapping(Map.of(HttpStatus.Series.SERVER_ERROR, MyRestClientException.class));
+		this.errorHandler.setStatusMapping(
+				Collections.singletonMap(HttpStatus.I_AM_A_TEAPOT, MyRestClientException.class));
+		this.errorHandler.setSeriesMapping(Collections
+				.singletonMap(HttpStatus.Series.SERVER_ERROR, MyRestClientException.class));
 	}
 
 
 	@Test
-	void hasError() throws Exception {
-		given(this.response.getStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT);
+	public void hasError() throws Exception {
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT.value());
 		assertThat(this.errorHandler.hasError(this.response)).isTrue();
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.INTERNAL_SERVER_ERROR);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.INTERNAL_SERVER_ERROR.value());
 		assertThat(this.errorHandler.hasError(this.response)).isTrue();
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.OK);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.OK.value());
 		assertThat(this.errorHandler.hasError(this.response)).isFalse();
 	}
 
 	@Test
-	void hasErrorOverride() throws Exception {
-		this.errorHandler.setSeriesMapping(Collections.singletonMap(HttpStatus.Series.CLIENT_ERROR, null));
+	public void hasErrorOverride() throws Exception {
+		this.errorHandler.setSeriesMapping(Collections
+				.singletonMap(HttpStatus.Series.CLIENT_ERROR, null));
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT.value());
 		assertThat(this.errorHandler.hasError(this.response)).isTrue();
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.NOT_FOUND.value());
 		assertThat(this.errorHandler.hasError(this.response)).isFalse();
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.OK);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.OK.value());
 		assertThat(this.errorHandler.hasError(this.response)).isFalse();
 	}
 
 	@Test
-	void handleErrorStatusMatch() throws Exception {
-		given(this.response.getStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT);
+	public void handleErrorStatusMatch() throws Exception {
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.I_AM_A_TEAPOT.value());
 		HttpHeaders responseHeaders = new HttpHeaders();
 		responseHeaders.setContentType(MediaType.APPLICATION_JSON);
 		given(this.response.getHeaders()).willReturn(responseHeaders);
@@ -99,14 +96,14 @@ class ExtractingResponseErrorHandlerTests {
 		responseHeaders.setContentLength(body.length);
 		given(this.response.getBody()).willReturn(new ByteArrayInputStream(body));
 
-		assertThatExceptionOfType(MyRestClientException.class)
-				.isThrownBy(() -> this.errorHandler.handleError(URI.create("/"), HttpMethod.GET, this.response))
-				.satisfies(ex -> assertThat(ex.getFoo()).isEqualTo("bar"));
+		assertThatExceptionOfType(MyRestClientException.class).isThrownBy(() ->
+				this.errorHandler.handleError(this.response))
+			.satisfies(ex -> assertThat(ex.getFoo()).isEqualTo("bar"));
 	}
 
 	@Test
-	void handleErrorSeriesMatch() throws Exception {
-		given(this.response.getStatusCode()).willReturn(HttpStatus.INTERNAL_SERVER_ERROR);
+	public void handleErrorSeriesMatch() throws Exception {
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.INTERNAL_SERVER_ERROR.value());
 		HttpHeaders responseHeaders = new HttpHeaders();
 		responseHeaders.setContentType(MediaType.APPLICATION_JSON);
 		given(this.response.getHeaders()).willReturn(responseHeaders);
@@ -115,14 +112,14 @@ class ExtractingResponseErrorHandlerTests {
 		responseHeaders.setContentLength(body.length);
 		given(this.response.getBody()).willReturn(new ByteArrayInputStream(body));
 
-		assertThatExceptionOfType(MyRestClientException.class)
-				.isThrownBy(() -> this.errorHandler.handleError(URI.create("/"), HttpMethod.GET, this.response))
-				.satisfies(ex -> assertThat(ex.getFoo()).isEqualTo("bar"));
+		assertThatExceptionOfType(MyRestClientException.class).isThrownBy(() ->
+				this.errorHandler.handleError(this.response))
+			.satisfies(ex -> assertThat(ex.getFoo()).isEqualTo("bar"));
 	}
 
 	@Test
-	void handleNoMatch() throws Exception {
-		given(this.response.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
+	public void handleNoMatch() throws Exception {
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.NOT_FOUND.value());
 		HttpHeaders responseHeaders = new HttpHeaders();
 		responseHeaders.setContentType(MediaType.APPLICATION_JSON);
 		given(this.response.getHeaders()).willReturn(responseHeaders);
@@ -131,19 +128,20 @@ class ExtractingResponseErrorHandlerTests {
 		responseHeaders.setContentLength(body.length);
 		given(this.response.getBody()).willReturn(new ByteArrayInputStream(body));
 
-		assertThatExceptionOfType(HttpClientErrorException.class)
-				.isThrownBy(() -> this.errorHandler.handleError(URI.create("/"), HttpMethod.GET, this.response))
-				.satisfies(ex -> {
-					assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-					assertThat(ex.getResponseBodyAsByteArray()).isEqualTo(body);
-				});
+		assertThatExceptionOfType(HttpClientErrorException.class).isThrownBy(() ->
+				this.errorHandler.handleError(this.response))
+			.satisfies(ex -> {
+				assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
+				assertThat(ex.getResponseBodyAsByteArray()).isEqualTo(body);
+			});
 	}
 
 	@Test
-	void handleNoMatchOverride() throws Exception {
-		this.errorHandler.setSeriesMapping(Collections.singletonMap(HttpStatus.Series.CLIENT_ERROR, null));
+	public void handleNoMatchOverride() throws Exception {
+		this.errorHandler.setSeriesMapping(Collections
+				.singletonMap(HttpStatus.Series.CLIENT_ERROR, null));
 
-		given(this.response.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
+		given(this.response.getRawStatusCode()).willReturn(HttpStatus.NOT_FOUND.value());
 		HttpHeaders responseHeaders = new HttpHeaders();
 		responseHeaders.setContentType(MediaType.APPLICATION_JSON);
 		given(this.response.getHeaders()).willReturn(responseHeaders);
@@ -152,7 +150,7 @@ class ExtractingResponseErrorHandlerTests {
 		responseHeaders.setContentLength(body.length);
 		given(this.response.getBody()).willReturn(new ByteArrayInputStream(body));
 
-		this.errorHandler.handleError(URI.create("/"), HttpMethod.GET, this.response);
+		this.errorHandler.handleError(this.response);
 	}
 
 
