@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,9 @@
 package org.springframework.web.util;
 
 import java.net.URI;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -24,117 +27,96 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.assertj.core.api.Assertions.assertThatNoException;
 
 /**
  * @author Arjen Poutsma
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
  */
-class UriTemplateTests {
+public class UriTemplateTests {
 
 	@Test
-	void emptyPathDoesNotThrowException() {
-		assertThatNoException().isThrownBy(() -> new UriTemplate(""));
-	}
-
-	@Test
-	void nullPathThrowsException() {
-		assertThatIllegalArgumentException().isThrownBy(() -> new UriTemplate(null));
-	}
-
-	@Test
-	void getVariableNames() {
+	public void getVariableNames() throws Exception {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		List<String> variableNames = template.getVariableNames();
-		assertThat(variableNames).as("Invalid variable names").containsExactly("hotel", "booking");
+		assertThat(variableNames).as("Invalid variable names").isEqualTo(Arrays.asList("hotel", "booking"));
 	}
 
 	@Test
-	void getVariableNamesFromEmpty() {
-		UriTemplate template = new UriTemplate("");
-		List<String> variableNames = template.getVariableNames();
-		assertThat(variableNames).isEmpty();
-	}
-
-	@Test
-	void expandVarArgs() {
+	public void expandVarArgs() throws Exception {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand("1", "42");
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
-	}
-
-	@Test
-	void expandVarArgsFromEmpty() {
-		UriTemplate template = new UriTemplate("");
-		URI result = template.expand();
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create(""));
-
-		result = template.expand("1", "42");
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create(""));
+		assertThat(result).as("Invalid expanded template").isEqualTo(new URI("/hotels/1/bookings/42"));
 	}
 
 	@Test  // SPR-9712
-	void expandVarArgsWithArrayValue() {
+	public void expandVarArgsWithArrayValue() throws Exception {
 		UriTemplate template = new UriTemplate("/sum?numbers={numbers}");
 		URI result = template.expand(new int[] {1, 2, 3});
-		assertThat(result).isEqualTo(URI.create("/sum?numbers=1,2,3"));
+		assertThat(result).isEqualTo(new URI("/sum?numbers=1,2,3"));
 	}
 
 	@Test
-	void expandVarArgsNotEnoughVariables() {
+	public void expandVarArgsNotEnoughVariables() throws Exception {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		assertThatIllegalArgumentException().isThrownBy(() -> template.expand("1"));
 	}
 
 	@Test
-	void expandMap() {
-		Map<String, String> uriVariables = Map.of("booking", "42", "hotel", "1");
+	public void expandMap() throws Exception {
+		Map<String, String> uriVariables = new HashMap<>(2);
+		uriVariables.put("booking", "42");
+		uriVariables.put("hotel", "1");
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand(uriVariables);
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
+		assertThat(result).as("Invalid expanded template").isEqualTo(new URI("/hotels/1/bookings/42"));
 	}
 
 	@Test
-	void expandMapDuplicateVariables() {
+	public void expandMapDuplicateVariables() throws Exception {
 		UriTemplate template = new UriTemplate("/order/{c}/{c}/{c}");
-		assertThat(template.getVariableNames()).containsExactly("c", "c", "c");
-		URI result = template.expand(Map.of("c", "cheeseburger"));
-		assertThat(result).isEqualTo(URI.create("/order/cheeseburger/cheeseburger/cheeseburger"));
+		assertThat(template.getVariableNames()).isEqualTo(Arrays.asList("c", "c", "c"));
+		URI result = template.expand(Collections.singletonMap("c", "cheeseburger"));
+		assertThat(result).isEqualTo(new URI("/order/cheeseburger/cheeseburger/cheeseburger"));
 	}
 
 	@Test
-	void expandMapNonString() {
-		Map<String, Integer> uriVariables = Map.of("booking", 42, "hotel", 1);
+	public void expandMapNonString() throws Exception {
+		Map<String, Integer> uriVariables = new HashMap<>(2);
+		uriVariables.put("booking", 42);
+		uriVariables.put("hotel", 1);
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand(uriVariables);
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
+		assertThat(result).as("Invalid expanded template").isEqualTo(new URI("/hotels/1/bookings/42"));
 	}
 
 	@Test
-	void expandMapEncoded() {
-		Map<String, String> uriVariables = Map.of("hotel", "Z\u00fcrich");
+	public void expandMapEncoded() throws Exception {
+		Map<String, String> uriVariables = Collections.singletonMap("hotel", "Z\u00fcrich");
 		UriTemplate template = new UriTemplate("/hotel list/{hotel}");
 		URI result = template.expand(uriVariables);
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotel%20list/Z%C3%BCrich"));
+		assertThat(result).as("Invalid expanded template").isEqualTo(new URI("/hotel%20list/Z%C3%BCrich"));
 	}
 
 	@Test
-	void expandMapUnboundVariables() {
-		Map<String, String> uriVariables = Map.of("booking", "42", "bar", "1");
+	public void expandMapUnboundVariables() throws Exception {
+		Map<String, String> uriVariables = new HashMap<>(2);
+		uriVariables.put("booking", "42");
+		uriVariables.put("bar", "1");
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
-		assertThatIllegalArgumentException().isThrownBy(() -> template.expand(uriVariables));
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				template.expand(uriVariables));
 	}
 
 	@Test
-	void expandEncoded() {
+	public void expandEncoded() throws Exception {
 		UriTemplate template = new UriTemplate("/hotel list/{hotel}");
 		URI result = template.expand("Z\u00fcrich");
-		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotel%20list/Z%C3%BCrich"));
+		assertThat(result).as("Invalid expanded template").isEqualTo(new URI("/hotel%20list/Z%C3%BCrich"));
 	}
 
 	@Test
-	void matches() {
+	public void matches() throws Exception {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		assertThat(template.matches("/hotels/1/bookings/42")).as("UriTemplate does not match").isTrue();
 		assertThat(template.matches("/hotels/bookings")).as("UriTemplate matches").isFalse();
@@ -143,24 +125,17 @@ class UriTemplateTests {
 	}
 
 	@Test
-	void matchesAgainstEmpty() {
-		UriTemplate template = new UriTemplate("");
-		assertThat(template.matches("/hotels/1/bookings/42")).as("UriTemplate matches").isFalse();
-		assertThat(template.matches("/hotels/bookings")).as("UriTemplate matches").isFalse();
-		assertThat(template.matches("")).as("UriTemplate does not match").isTrue();
-		assertThat(template.matches(null)).as("UriTemplate matches").isFalse();
-	}
-
-	@Test
-	void matchesCustomRegex() {
+	public void matchesCustomRegex() throws Exception {
 		UriTemplate template = new UriTemplate("/hotels/{hotel:\\d+}");
 		assertThat(template.matches("/hotels/42")).as("UriTemplate does not match").isTrue();
 		assertThat(template.matches("/hotels/foo")).as("UriTemplate matches").isFalse();
 	}
 
 	@Test
-	void match() {
-		Map<String, String> expected = Map.of("booking", "42", "hotel", "1");
+	public void match() throws Exception {
+		Map<String, String> expected = new HashMap<>(2);
+		expected.put("booking", "42");
+		expected.put("hotel", "1");
 
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		Map<String, String> result = template.match("/hotels/1/bookings/42");
@@ -168,15 +143,10 @@ class UriTemplateTests {
 	}
 
 	@Test
-	void matchAgainstEmpty() {
-		UriTemplate template = new UriTemplate("");
-		Map<String, String> result = template.match("/hotels/1/bookings/42");
-		assertThat(result).as("Invalid match").isEmpty();
-	}
-
-	@Test
-	void matchCustomRegex() {
-		Map<String, String> expected = Map.of("booking", "42", "hotel", "1");
+	public void matchCustomRegex() throws Exception {
+		Map<String, String> expected = new HashMap<>(2);
+		expected.put("booking", "42");
+		expected.put("hotel", "1");
 
 		UriTemplate template = new UriTemplate("/hotels/{hotel:\\d}/bookings/{booking:\\d+}");
 		Map<String, String> result = template.match("/hotels/1/bookings/42");
@@ -184,41 +154,44 @@ class UriTemplateTests {
 	}
 
 	@Test  // SPR-13627
-	void matchCustomRegexWithNestedCurlyBraces() {
+	public void matchCustomRegexWithNestedCurlyBraces() throws Exception {
 		UriTemplate template = new UriTemplate("/site.{domain:co.[a-z]{2}}");
 		Map<String, String> result = template.match("/site.co.eu");
-		assertThat(result).as("Invalid match").isEqualTo(Map.of("domain", "co.eu"));
+		assertThat(result).as("Invalid match").isEqualTo(Collections.singletonMap("domain", "co.eu"));
 	}
 
 	@Test
-	void matchDuplicate() {
+	public void matchDuplicate() throws Exception {
 		UriTemplate template = new UriTemplate("/order/{c}/{c}/{c}");
 		Map<String, String> result = template.match("/order/cheeseburger/cheeseburger/cheeseburger");
-		assertThat(result).as("Invalid match").isEqualTo(Map.of("c", "cheeseburger"));
+		Map<String, String> expected = Collections.singletonMap("c", "cheeseburger");
+		assertThat(result).as("Invalid match").isEqualTo(expected);
 	}
 
 	@Test
-	void matchMultipleInOneSegment() {
+	public void matchMultipleInOneSegment() throws Exception {
 		UriTemplate template = new UriTemplate("/{foo}-{bar}");
 		Map<String, String> result = template.match("/12-34");
-		Map<String, String> expected = Map.of("foo", "12", "bar", "34");
+		Map<String, String> expected = new HashMap<>(2);
+		expected.put("foo", "12");
+		expected.put("bar", "34");
 		assertThat(result).as("Invalid match").isEqualTo(expected);
 	}
 
 	@Test  // SPR-16169
-	void matchWithMultipleSegmentsAtTheEnd() {
+	public void matchWithMultipleSegmentsAtTheEnd() throws Exception {
 		UriTemplate template = new UriTemplate("/account/{accountId}");
 		assertThat(template.matches("/account/15/alias/5")).isFalse();
 	}
 
 	@Test
-	void queryVariables() {
+	public void queryVariables() throws Exception {
 		UriTemplate template = new UriTemplate("/search?q={query}");
 		assertThat(template.matches("/search?q=foo")).isTrue();
 	}
 
 	@Test
-	void fragments() {
+	public void fragments() throws Exception {
 		UriTemplate template = new UriTemplate("/search#{fragment}");
 		assertThat(template.matches("/search#foo")).isTrue();
 
@@ -227,22 +200,22 @@ class UriTemplateTests {
 	}
 
 	@Test  // SPR-13705
-	void matchesWithSlashAtTheEnd() {
+	public void matchesWithSlashAtTheEnd() throws Exception {
 		assertThat(new UriTemplate("/test/").matches("/test/")).isTrue();
 	}
 
 	@Test
-	void expandWithDollar() {
+	public void expandWithDollar() throws Exception {
 		UriTemplate template = new UriTemplate("/{a}");
 		URI uri = template.expand("$replacement");
-		assertThat(uri).hasToString("/$replacement");
+		assertThat(uri.toString()).isEqualTo("/$replacement");
 	}
 
 	@Test
-	void expandWithAtSign() {
+	public void expandWithAtSign() throws Exception {
 		UriTemplate template = new UriTemplate("http://localhost/query={query}");
 		URI uri = template.expand("foo@bar");
-		assertThat(uri).hasToString("http://localhost/query=foo@bar");
+		assertThat(uri.toString()).isEqualTo("http://localhost/query=foo@bar");
 	}
 
 }
