@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,19 +21,18 @@ import java.io.OutputStream;
 import java.io.Serializable;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
-import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.annotation.JsonView;
-import org.jspecify.annotations.Nullable;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.skyscreamer.jsonassert.JSONAssert;
-import org.xmlunit.assertj.XmlAssert;
-import tools.jackson.databind.SerializationFeature;
-import tools.jackson.databind.json.JsonMapper;
 
 import org.springframework.aop.framework.ProxyFactory;
 import org.springframework.aop.target.SingletonTargetSource;
@@ -44,22 +43,18 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpInputMessage;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.ByteArrayHttpMessageConverter;
 import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.http.converter.ResourceHttpMessageConverter;
 import org.springframework.http.converter.StringHttpMessageConverter;
-import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.http.converter.support.AllEncompassingFormHttpMessageConverter;
-import org.springframework.http.converter.xml.JacksonXmlHttpMessageConverter;
 import org.springframework.http.converter.xml.MappingJackson2XmlHttpMessageConverter;
+import org.springframework.lang.Nullable;
 import org.springframework.util.MultiValueMap;
-import org.springframework.util.ReflectionUtils;
 import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
-import org.springframework.web.HttpMediaTypeNotAcceptableException;
 import org.springframework.web.accept.ContentNegotiationManagerFactoryBean;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -71,69 +66,94 @@ import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.method.support.ModelAndViewContainer;
+import org.springframework.web.servlet.ModelAndView;
+import org.springframework.web.servlet.view.json.MappingJackson2JsonView;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
 import org.springframework.web.util.WebUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 
 /**
- * Tests for {@link RequestResponseBodyMethodProcessor} with actual delegation to
- * {@link HttpMessageConverter} instances.
+ * Test fixture for a {@link RequestResponseBodyMethodProcessor} with
+ * actual delegation to {@link HttpMessageConverter} instances. Also see
+ * {@link RequestResponseBodyMethodProcessorMockTests}.
  *
  * @author Rossen Stoyanchev
  * @author Sebastien Deleuze
- * @author Sam Brannen
- * @see RequestResponseBodyMethodProcessorMockTests
  */
 @SuppressWarnings("unused")
-class RequestResponseBodyMethodProcessorTests {
+public class RequestResponseBodyMethodProcessorTests {
 
-	private final ModelAndViewContainer container = new ModelAndViewContainer();
+	protected static final String NEWLINE_SYSTEM_PROPERTY = System.getProperty("line.separator");
 
-	private final MockHttpServletRequest servletRequest = new MockHttpServletRequest();
 
-	private final MockHttpServletResponse servletResponse = new MockHttpServletResponse();
+	private ModelAndViewContainer container;
 
-	private final NativeWebRequest request = new ServletWebRequest(servletRequest, servletResponse);
+	private MockHttpServletRequest servletRequest;
 
-	private final ValidatingBinderFactory factory = new ValidatingBinderFactory();
+	private MockHttpServletResponse servletResponse;
 
-	private final Method method = ReflectionUtils.findMethod(getClass(), "handle",
-			List.class, SimpleBean.class, MultiValueMap.class, String.class);
+	private NativeWebRequest request;
 
-	private final MethodParameter paramGenericList = new MethodParameter(method, 0);
-	private final MethodParameter paramSimpleBean = new MethodParameter(method, 1);
-	private final MethodParameter paramMultiValueMap = new MethodParameter(method, 2);
-	private final MethodParameter paramString = new MethodParameter(method, 3);
-	private final MethodParameter returnTypeString = new MethodParameter(method, -1);
+	private ValidatingBinderFactory factory;
+
+	private MethodParameter paramGenericList;
+	private MethodParameter paramSimpleBean;
+	private MethodParameter paramMultiValueMap;
+	private MethodParameter paramString;
+	private MethodParameter returnTypeString;
+
+
+	@BeforeEach
+	public void setup() throws Exception {
+		container = new ModelAndViewContainer();
+		servletRequest = new MockHttpServletRequest();
+		servletRequest.setMethod("POST");
+		servletResponse = new MockHttpServletResponse();
+		request = new ServletWebRequest(servletRequest, servletResponse);
+		this.factory = new ValidatingBinderFactory();
+
+		Method method = getClass().getDeclaredMethod("handle",
+				List.class, SimpleBean.class, MultiValueMap.class, String.class);
+		paramGenericList = new MethodParameter(method, 0);
+		paramSimpleBean = new MethodParameter(method, 1);
+		paramMultiValueMap = new MethodParameter(method, 2);
+		paramString = new MethodParameter(method, 3);
+		returnTypeString = new MethodParameter(method, -1);
+	}
 
 
 	@Test
-	void resolveArgumentParameterizedType() throws Exception {
+	public void resolveArgumentParameterizedType() throws Exception {
 		String content = "[{\"name\" : \"Jad\"}, {\"name\" : \"Robert\"}]";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		@SuppressWarnings("unchecked")
 		List<SimpleBean> result = (List<SimpleBean>) processor.resolveArgument(
 				paramGenericList, container, request, factory);
 
-		assertThat(result).map(SimpleBean::getName).containsExactly("Jad", "Robert");
+		assertThat(result).isNotNull();
+		assertThat(result.get(0).getName()).isEqualTo("Jad");
+		assertThat(result.get(1).getName()).isEqualTo("Robert");
 	}
 
 	@Test
-	void resolveArgumentRawTypeFromParameterizedType() throws Exception {
+	public void resolveArgumentRawTypeFromParameterizedType() throws Exception {
 		String content = "fruit=apple&vegetable=kale";
 		this.servletRequest.setMethod("GET");
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_FORM_URLENCODED_VALUE);
 
-		List<HttpMessageConverter<?>> converters = List.of(new AllEncompassingFormHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new AllEncompassingFormHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		@SuppressWarnings("unchecked")
@@ -146,12 +166,13 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void resolveArgumentClassJson() throws Exception {
+	public void resolveArgumentClassJson() throws Exception {
 		String content = "{\"name\" : \"Jad\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType("application/json");
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		SimpleBean result = (SimpleBean) processor.resolveArgument(
@@ -162,52 +183,57 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void resolveArgumentClassString() throws Exception {
+	public void resolveArgumentClassString() throws Exception {
 		String content = "foobarbaz";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType("application/json");
 
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new StringHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		String result = (String) processor.resolveArgument(
 				paramString, container, request, factory);
 
+		assertThat(result).isNotNull();
 		assertThat(result).isEqualTo("foobarbaz");
 	}
 
 	@Test // SPR-9942
-	void resolveArgumentRequiredNoContent() {
+	public void resolveArgumentRequiredNoContent() throws Exception {
 		this.servletRequest.setContent(new byte[0]);
 		this.servletRequest.setContentType("text/plain");
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new StringHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 		assertThatExceptionOfType(HttpMessageNotReadableException.class).isThrownBy(() ->
 				processor.resolveArgument(paramString, container, request, factory));
 	}
 
 	@Test  // SPR-12778
-	void resolveArgumentRequiredNoContentDefaultValue() throws Exception {
+	public void resolveArgumentRequiredNoContentDefaultValue() throws Exception {
 		this.servletRequest.setContent(new byte[0]);
 		this.servletRequest.setContentType("text/plain");
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
-		List<Object> advice = List.of(new EmptyRequestBodyAdvice());
+		List<HttpMessageConverter<?>> converters = Collections.singletonList(new StringHttpMessageConverter());
+		List<Object> advice = Collections.singletonList(new EmptyRequestBodyAdvice());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters, advice);
 		String arg = (String) processor.resolveArgument(paramString, container, request, factory);
+		assertThat(arg).isNotNull();
 		assertThat(arg).isEqualTo("default value for empty body");
 	}
 
 	@Test  // SPR-9964
-	void resolveArgumentTypeVariable() throws Exception {
+	public void resolveArgumentTypeVariable() throws Exception {
 		Method method = MyParameterizedController.class.getMethod("handleDto", Identifiable.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new MySimpleParameterizedController(), method);
 		MethodParameter methodParam = handlerMethod.getMethodParameters()[0];
 
 		String content = "{\"name\" : \"Jad\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		SimpleBean result = (SimpleBean) processor.resolveArgument(methodParam, container, request, factory);
@@ -217,38 +243,42 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-14470
-	void resolveParameterizedWithTypeVariableArgument() throws Exception {
+	public void resolveParameterizedWithTypeVariableArgument() throws Exception {
 		Method method = MyParameterizedControllerWithList.class.getMethod("handleDto", List.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new MySimpleParameterizedControllerWithList(), method);
 		MethodParameter methodParam = handlerMethod.getMethodParameters()[0];
 
 		String content = "[{\"name\" : \"Jad\"}, {\"name\" : \"Robert\"}]";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		@SuppressWarnings("unchecked")
 		List<SimpleBean> result = (List<SimpleBean>) processor.resolveArgument(
 				methodParam, container, request, factory);
 
-		assertThat(result).map(SimpleBean::getName).containsExactly("Jad", "Robert");
+		assertThat(result).isNotNull();
+		assertThat(result.get(0).getName()).isEqualTo("Jad");
+		assertThat(result.get(1).getName()).isEqualTo("Robert");
 	}
 
 	@Test  // SPR-11225
-	void resolveArgumentTypeVariableWithNonGenericConverter() throws Exception {
+	public void resolveArgumentTypeVariableWithNonGenericConverter() throws Exception {
 		Method method = MyParameterizedController.class.getMethod("handleDto", Identifiable.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new MySimpleParameterizedController(), method);
 		MethodParameter methodParam = handlerMethod.getMethodParameters()[0];
 
 		String content = "{\"name\" : \"Jad\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
-		HttpMessageConverter<Object> target = new JacksonJsonHttpMessageConverter();
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		HttpMessageConverter<Object> target = new MappingJackson2HttpMessageConverter();
 		HttpMessageConverter<?> proxy = ProxyFactory.getProxy(HttpMessageConverter.class, new SingletonTargetSource(target));
-		List<HttpMessageConverter<?>> converters = List.of(proxy);
+		converters.add(proxy);
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		SimpleBean result = (SimpleBean) processor.resolveArgument(methodParam, container, request, factory);
@@ -258,11 +288,12 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-9160
-	void handleReturnValueSortByQuality() throws Exception {
+	public void handleReturnValueSortByQuality() throws Exception {
 		this.servletRequest.addHeader("Accept", "text/plain; q=0.5, application/json");
 
-		List<HttpMessageConverter<?>> converters =
-				List.of(new JacksonJsonHttpMessageConverter(), new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+		converters.add(new StringHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		processor.writeWithMessageConverters("Foo", returnTypeString, request);
@@ -271,9 +302,11 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void handleReturnValueString() throws Exception {
-		List<HttpMessageConverter<?>> converters =
-					List.of(new ByteArrayHttpMessageConverter(), new StringHttpMessageConverter());
+	public void handleReturnValueString() throws Exception {
+		List<HttpMessageConverter<?>>converters = new ArrayList<>();
+		converters.add(new ByteArrayHttpMessageConverter());
+		converters.add(new StringHttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 		processor.handleReturnValue("Foo", returnTypeString, container, request);
 
@@ -282,12 +315,14 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-13423
-	void handleReturnValueCharSequence() throws Exception {
+	public void handleReturnValueCharSequence() throws Exception {
+		List<HttpMessageConverter<?>>converters = new ArrayList<>();
+		converters.add(new ByteArrayHttpMessageConverter());
+		converters.add(new StringHttpMessageConverter());
+
 		Method method = ResponseBodyController.class.getMethod("handleWithCharSequence");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		List<HttpMessageConverter<?>> converters =
-				List.of(new ByteArrayHttpMessageConverter(), new StringHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 		processor.handleReturnValue(new StringBuilder("Foo"), returnType, container, request);
 
@@ -296,11 +331,12 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void handleReturnValueStringAcceptCharset() throws Exception {
+	public void handleReturnValueStringAcceptCharset() throws Exception {
 		this.servletRequest.addHeader("Accept", "text/plain;charset=UTF-8");
 
-		List<HttpMessageConverter<?>> converters =
-				List.of(new ByteArrayHttpMessageConverter(), new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new ByteArrayHttpMessageConverter());
+		converters.add(new StringHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		processor.writeWithMessageConverters("Foo", returnTypeString, request);
@@ -308,14 +344,17 @@ class RequestResponseBodyMethodProcessorTests {
 		assertThat(servletResponse.getHeader("Content-Type")).isEqualTo("text/plain;charset=UTF-8");
 	}
 
-	@Test // SPR-12894
-	void handleReturnValueImage() throws Exception {
+	// SPR-12894
+
+	@Test
+	public void handleReturnValueImage() throws Exception {
 		this.servletRequest.addHeader("Accept", "*/*");
 
 		Method method = getClass().getDeclaredMethod("getImage");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		List<HttpMessageConverter<?>> converters = List.of(new ResourceHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new ResourceHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		ClassPathResource resource = new ClassPathResource("logo.jpg", getClass());
@@ -325,116 +364,54 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test // gh-26212
-	void handleReturnValueWithObjectMapperByTypeRegistration() throws Exception {
+	public void handleReturnValueWithObjectMapperByTypeRegistration() throws Exception {
 		MediaType halFormsMediaType = MediaType.parseMediaType("application/prs.hal-forms+json");
 		MediaType halMediaType = MediaType.parseMediaType("application/hal+json");
 
-		this.servletRequest.addHeader("Accept", halFormsMediaType + "," + halMediaType);
+		ObjectMapper objectMapper = new ObjectMapper();
+		objectMapper.configure(SerializationFeature.INDENT_OUTPUT, true);
 
-		JsonMapper mapper = JsonMapper.builder().enable(SerializationFeature.INDENT_OUTPUT).build();
+		MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
+		converter.registerObjectMappersForType(SimpleBean.class, map -> map.put(halMediaType, objectMapper));
+
+		this.servletRequest.addHeader("Accept", halFormsMediaType + "," + halMediaType);
 
 		SimpleBean simpleBean = new SimpleBean();
 		simpleBean.setId(12L);
 		simpleBean.setName("Jason");
 
-		JacksonJsonHttpMessageConverter converter = new JacksonJsonHttpMessageConverter();
-		converter.registerObjectMappersForType(SimpleBean.class, map -> map.put(halMediaType, mapper));
 		RequestResponseBodyMethodProcessor processor =
-				new RequestResponseBodyMethodProcessor(List.of(converter));
+				new RequestResponseBodyMethodProcessor(Collections.singletonList(converter));
 		MethodParameter returnType = new MethodParameter(getClass().getDeclaredMethod("getSimpleBean"), -1);
 		processor.writeWithMessageConverters(simpleBean, returnType, this.request);
 
 		assertThat(this.servletResponse.getHeader("Content-Type")).isEqualTo(halMediaType.toString());
-		JSONAssert.assertEquals("""
-				{ "id" : 12, "name" : "Jason" }""", this.servletResponse.getContentAsString(), true);
-	}
-
-	@Test
-	void problemDetailDefaultMediaType() throws Exception {
-		testProblemDetailMediaType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-	}
-
-	@Test
-	void problemDetailWhenJsonRequested() throws Exception {
-		this.servletRequest.addHeader("Accept", MediaType.APPLICATION_JSON_VALUE);
-		testProblemDetailMediaType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-	}
-
-	@Test // gh-29588
-	void problemDetailWhenJsonAndProblemJsonRequested() throws Exception {
-		this.servletRequest.addHeader("Accept", MediaType.APPLICATION_JSON_VALUE + "," + MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-		testProblemDetailMediaType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-	}
-
-	@Test
-	void problemDetailWhenNoMatchingMediaTypeRequested() throws Exception {
-		this.servletRequest.addHeader("Accept", MediaType.APPLICATION_PDF_VALUE);
-		testProblemDetailMediaType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
-	}
-
-	private void testProblemDetailMediaType(String expectedContentType) throws Exception {
-		MyProblemDetail problemDetail = new MyProblemDetail(HttpStatus.BAD_REQUEST);
-
-		this.servletRequest.setRequestURI("/path");
-
-		RequestResponseBodyMethodProcessor processor =
-				new RequestResponseBodyMethodProcessor(List.of(
-						new JacksonJsonHttpMessageConverter(), new JacksonXmlHttpMessageConverter()));
-
-		MethodParameter returnType =
-				new MethodParameter(getClass().getDeclaredMethod("handleAndReturnProblemDetail"), -1);
-
-		processor.handleReturnValue(problemDetail, returnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getStatus()).isEqualTo(HttpStatus.BAD_REQUEST.value());
-		assertThat(this.servletResponse.getContentType()).isEqualTo(expectedContentType);
-
-		if (expectedContentType.equals(MediaType.APPLICATION_PROBLEM_XML_VALUE)) {
-			XmlAssert.assertThat(this.servletResponse.getContentAsString()).and("""
-						<problem xmlns="urn:ietf:rfc:7807">
-							<status>400</status>
-							<instance>/path</instance>
-							<title>Bad Request</title>
-							<type>about:blank</type>
-						</problem>""")
-					.ignoreWhitespace()
-					.areIdentical();
-		}
-		else {
-			JSONAssert.assertEquals("""
-					{
-						"type":     "about:blank",
-						"title":    "Bad Request",
-						"status":   400,
-						"instance": "/path"
-					}""", this.servletResponse.getContentAsString(), false);
-		}
-	}
-
-	@Test
-	void problemDetailWhenProblemXmlRequested() throws Exception {
-		this.servletRequest.addHeader("Accept", MediaType.APPLICATION_PROBLEM_XML_VALUE);
-		testProblemDetailMediaType(MediaType.APPLICATION_PROBLEM_XML_VALUE);
+		assertThat(this.servletResponse.getContentAsString()).isEqualTo(
+				"{" + NEWLINE_SYSTEM_PROPERTY +
+				"  \"id\" : 12," + NEWLINE_SYSTEM_PROPERTY +
+				"  \"name\" : \"Jason\"" + NEWLINE_SYSTEM_PROPERTY +
+				"}");
 	}
 
 	@Test // SPR-13135
-	void handleReturnValueWithInvalidReturnType() throws Exception {
+	public void handleReturnValueWithInvalidReturnType() throws Exception {
 		Method method = getClass().getDeclaredMethod("handleAndReturnOutputStream");
 		MethodParameter returnType = new MethodParameter(method, -1);
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
-		assertThatExceptionOfType(HttpMediaTypeNotAcceptableException.class).isThrownBy(() ->
-				processor.writeWithMessageConverters(new ByteArrayOutputStream(), returnType, this.request));
+		assertThatIllegalArgumentException().isThrownBy(() -> {
+				RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(new ArrayList<>());
+				processor.writeWithMessageConverters(new ByteArrayOutputStream(), returnType, this.request);
+		});
 	}
 
 	@Test
-	void addContentDispositionHeader() throws Exception {
+	public void addContentDispositionHeader() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.addMediaType("pdf", new MediaType("application", "pdf"));
 		factory.afterPropertiesSet();
 
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				List.of(new StringHttpMessageConverter()), factory.getObject());
+				Collections.singletonList(new StringHttpMessageConverter()),
+				factory.getObject());
 
 		assertContentDisposition(processor, false, "/hello.json", "safe extension");
 		assertContentDisposition(processor, false, "/hello.pdf", "registered extension");
@@ -458,13 +435,14 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void addContentDispositionHeaderToErrorResponse() throws Exception {
+	public void addContentDispositionHeaderToErrorResponse() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.addMediaType("pdf", new MediaType("application", "pdf"));
 		factory.afterPropertiesSet();
 
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				List.of(new StringHttpMessageConverter()), factory.getObject());
+				Collections.singletonList(new StringHttpMessageConverter()),
+				factory.getObject());
 
 		this.servletRequest.setRequestURI("/hello.dataless");
 		this.servletResponse.setStatus(400);
@@ -476,196 +454,130 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test
-	void supportsReturnTypeResponseBodyOnType() throws Exception {
+	public void supportsReturnTypeResponseBodyOnType() throws Exception {
 		Method method = ResponseBodyController.class.getMethod("handle");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new StringHttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		assertThat(processor.supportsReturnType(returnType)).as("Failed to recognize type-level @ResponseBody").isTrue();
 	}
 
 	@Test
-	void supportsReturnTypeRestController() throws Exception {
+	public void supportsReturnTypeRestController() throws Exception {
 		Method method = TestRestController.class.getMethod("handle");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		List<HttpMessageConverter<?>> converters = List.of(new StringHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new StringHttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		assertThat(processor.supportsReturnType(returnType)).as("Failed to recognize type-level @RestController").isTrue();
 	}
 
 	@Test
-	void jacksonJsonViewWithResponseBodyAndJsonMessageConverter() throws Exception {
+	public void jacksonJsonViewWithResponseBodyAndJsonMessageConverter() throws Exception {
 		Method method = JacksonController.class.getMethod("handleResponseBody");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewResponseBodyAdvice()));
 
 		Object returnValue = new JacksonController().handleResponseBody();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("\"withView1\":\"with\"")
-				.contains("\"withView2\":\"with\"")
-				.doesNotContain("\"withoutView\":\"without\"");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("\"withView1\":\"with\"")).isFalse();
+		assertThat(content.contains("\"withView2\":\"with\"")).isTrue();
+		assertThat(content.contains("\"withoutView\":\"without\"")).isFalse();
 	}
 
 	@Test
-	@SuppressWarnings("removal")
-	void jackson2JsonViewWithResponseBodyAndJsonMessageConverter() throws Exception {
-		Method method = JacksonController.class.getMethod("handleResponseBody");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
-
-		Object returnValue = new JacksonController().handleResponseBody();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("\"withView1\":\"with\"")
-				.contains("\"withView2\":\"with\"")
-				.doesNotContain("\"withoutView\":\"without\"");
-	}
-
-	@Test
-	void jacksonJsonViewWithResponseEntityAndJsonMessageConverter() throws Exception {
+	public void jacksonJsonViewWithResponseEntityAndJsonMessageConverter() throws Exception {
 		Method method = JacksonController.class.getMethod("handleResponseEntity");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+
 		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewResponseBodyAdvice()));
 
 		Object returnValue = new JacksonController().handleResponseEntity();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("\"withView1\":\"with\"")
-				.contains("\"withView2\":\"with\"")
-				.doesNotContain("\"withoutView\":\"without\"");
-	}
-
-	@Test
-	@SuppressWarnings("removal")
-	void jackson2JsonViewWithResponseEntityAndJsonMessageConverter() throws Exception {
-		Method method = JacksonController.class.getMethod("handleResponseEntity");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
-
-		Object returnValue = new JacksonController().handleResponseEntity();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("\"withView1\":\"with\"")
-				.contains("\"withView2\":\"with\"")
-				.doesNotContain("\"withoutView\":\"without\"");
-	}
-
-	@Test
-	void jacksonJsonViewWithResponseBodyAndXmlMessageConverter() throws Exception {
-		Method method = JacksonController.class.getMethod("handleResponseBody");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonXmlHttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
-
-		Object returnValue = new JacksonController().handleResponseBody();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("<withView1>with</withView1>")
-				.contains("<withView2>with</withView2>")
-				.doesNotContain("<withoutView>without</withoutView>");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("\"withView1\":\"with\"")).isFalse();
+		assertThat(content.contains("\"withView2\":\"with\"")).isTrue();
+		assertThat(content.contains("\"withoutView\":\"without\"")).isFalse();
 	}
 
 	@Test  // SPR-12149
-	@SuppressWarnings("removal")
-	void jackson2JsonViewWithResponseBodyAndXmlMessageConverter() throws Exception {
+	public void jacksonJsonViewWithResponseBodyAndXmlMessageConverter() throws Exception {
 		Method method = JacksonController.class.getMethod("handleResponseBody");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2XmlHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2XmlHttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewResponseBodyAdvice()));
 
 		Object returnValue = new JacksonController().handleResponseBody();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("<withView1>with</withView1>")
-				.contains("<withView2>with</withView2>")
-				.doesNotContain("<withoutView>without</withoutView>");
-	}
-
-	@Test
-	void jacksonJsonViewWithResponseEntityAndXmlMessageConverter() throws Exception {
-		Method method = JacksonController.class.getMethod("handleResponseEntity");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonXmlHttpMessageConverter());
-		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
-
-		Object returnValue = new JacksonController().handleResponseEntity();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("<withView1>with</withView1>")
-				.contains("<withView2>with</withView2>")
-				.doesNotContain("<withoutView>without</withoutView>");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("<withView1>with</withView1>")).isFalse();
+		assertThat(content.contains("<withView2>with</withView2>")).isTrue();
+		assertThat(content.contains("<withoutView>without</withoutView>")).isFalse();
 	}
 
 	@Test  // SPR-12149
-	@SuppressWarnings("removal")
-	void jackson2JsonViewWithResponseEntityAndXmlMessageConverter() throws Exception {
+	public void jacksonJsonViewWithResponseEntityAndXmlMessageConverter() throws Exception {
 		Method method = JacksonController.class.getMethod("handleResponseEntity");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2XmlHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2XmlHttpMessageConverter());
+
 		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewResponseBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewResponseBodyAdvice()));
 
 		Object returnValue = new JacksonController().handleResponseEntity();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.doesNotContain("<withView1>with</withView1>")
-				.contains("<withView2>with</withView2>")
-				.doesNotContain("<withoutView>without</withoutView>");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("<withView1>with</withView1>")).isFalse();
+		assertThat(content.contains("<withView2>with</withView2>")).isTrue();
+		assertThat(content.contains("<withoutView>without</withoutView>")).isFalse();
 	}
 
-	@Test
-	void resolveArgumentWithJacksonJsonView() throws Exception {
+	@Test  // SPR-12501
+	public void resolveArgumentWithJacksonJsonView() throws Exception {
 		String content = "{\"withView1\" : \"with\", \"withView2\" : \"with\", \"withoutView\" : \"without\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
 		Method method = JacksonController.class.getMethod("handleRequestBody", JacksonViewBean.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewRequestBodyAdvice()));
 
 		JacksonViewBean result = (JacksonViewBean)
 				processor.resolveArgument(methodParameter, this.container, this.request, this.factory);
@@ -677,42 +589,20 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-12501
-	@SuppressWarnings("removal")
-	void resolveArgumentWithJackson2JsonView() throws Exception {
+	public void resolveHttpEntityArgumentWithJacksonJsonView() throws Exception {
 		String content = "{\"withView1\" : \"with\", \"withView2\" : \"with\", \"withoutView\" : \"without\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
-		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
-
-		Method method = JacksonController.class.getMethod("handleRequestBody", JacksonViewBean.class);
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
-
-		JacksonViewBean result = (JacksonViewBean)
-				processor.resolveArgument(methodParameter, this.container, this.request, this.factory);
-
-		assertThat(result).isNotNull();
-		assertThat(result.getWithView1()).isEqualTo("with");
-		assertThat(result.getWithView2()).isNull();
-		assertThat(result.getWithoutView()).isNull();
-	}
-
-	@Test
-	void resolveHttpEntityArgumentWithJacksonJsonView() throws Exception {
-		String content = "{\"withView1\" : \"with\", \"withView2\" : \"with\", \"withoutView\" : \"without\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
 		Method method = JacksonController.class.getMethod("handleHttpEntity", HttpEntity.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+
 		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewRequestBodyAdvice()));
 
 		@SuppressWarnings("unchecked")
 		HttpEntity<JacksonViewBean> result = (HttpEntity<JacksonViewBean>)
@@ -726,47 +616,23 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-12501
-	@SuppressWarnings("removal")
-	void resolveHttpEntityArgumentWithJackson2JsonView() throws Exception {
-		String content = "{\"withView1\" : \"with\", \"withView2\" : \"with\", \"withoutView\" : \"without\"}";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
-		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
-
-		Method method = JacksonController.class.getMethod("handleHttpEntity", HttpEntity.class);
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
-
-		@SuppressWarnings("unchecked")
-		HttpEntity<JacksonViewBean> result = (HttpEntity<JacksonViewBean>)
-				processor.resolveArgument( methodParameter, this.container, this.request, this.factory);
-
-		assertThat(result).isNotNull();
-		assertThat(result.getBody()).isNotNull();
-		assertThat(result.getBody().getWithView1()).isEqualTo("with");
-		assertThat(result.getBody().getWithView2()).isNull();
-		assertThat(result.getBody().getWithoutView()).isNull();
-	}
-
-	@Test
-	void resolveArgumentWithJacksonJsonViewAndXmlMessageConverter() throws Exception {
+	public void resolveArgumentWithJacksonJsonViewAndXmlMessageConverter() throws Exception {
 		String content = "<root>" +
 				"<withView1>with</withView1>" +
 				"<withView2>with</withView2>" +
 				"<withoutView>without</withoutView></root>";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_XML_VALUE);
 
 		Method method = JacksonController.class.getMethod("handleRequestBody", JacksonViewBean.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonXmlHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2XmlHttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewRequestBodyAdvice()));
 
 		JacksonViewBean result = (JacksonViewBean)
 				processor.resolveArgument(methodParameter, this.container, this.request, this.factory);
@@ -778,48 +644,23 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // SPR-12501
-	@SuppressWarnings("removal")
-	void resolveArgumentWithJackson2JsonViewAndXmlMessageConverter() throws Exception {
+	public void resolveHttpEntityArgumentWithJacksonJsonViewAndXmlMessageConverter() throws Exception {
 		String content = "<root>" +
 				"<withView1>with</withView1>" +
 				"<withView2>with</withView2>" +
 				"<withoutView>without</withoutView></root>";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
-		this.servletRequest.setContentType(MediaType.APPLICATION_XML_VALUE);
-
-		Method method = JacksonController.class.getMethod("handleRequestBody", JacksonViewBean.class);
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2XmlHttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
-
-		JacksonViewBean result = (JacksonViewBean)
-				processor.resolveArgument(methodParameter, this.container, this.request, this.factory);
-
-		assertThat(result).isNotNull();
-		assertThat(result.getWithView1()).isEqualTo("with");
-		assertThat(result.getWithView2()).isNull();
-		assertThat(result.getWithoutView()).isNull();
-	}
-
-	@Test
-	void resolveHttpEntityArgumentWithJacksonJsonViewAndXmlMessageConverter() throws Exception {
-		String content = "<root>" +
-				"<withView1>with</withView1>" +
-				"<withView2>with</withView2>" +
-				"<withoutView>without</withoutView></root>";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
+		this.servletRequest.setContent(content.getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_XML_VALUE);
 
 		Method method = JacksonController.class.getMethod("handleHttpEntity", HttpEntity.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonXmlHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2XmlHttpMessageConverter());
+
 		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
+				converters, null, Collections.singletonList(new JsonViewRequestBodyAdvice()));
 
 		@SuppressWarnings("unchecked")
 		HttpEntity<JacksonViewBean> result = (HttpEntity<JacksonViewBean>)
@@ -830,156 +671,76 @@ class RequestResponseBodyMethodProcessorTests {
 		assertThat(result.getBody().getWithView1()).isEqualTo("with");
 		assertThat(result.getBody().getWithView2()).isNull();
 		assertThat(result.getBody().getWithoutView()).isNull();
-	}
-
-	@Test  // SPR-12501
-	@SuppressWarnings("removal")
-	void resolveHttpEntityArgumentWithJackson2JsonViewAndXmlMessageConverter() throws Exception {
-		String content = "<root>" +
-				"<withView1>with</withView1>" +
-				"<withView2>with</withView2>" +
-				"<withoutView>without</withoutView></root>";
-		this.servletRequest.setContent(content.getBytes(StandardCharsets.UTF_8));
-		this.servletRequest.setContentType(MediaType.APPLICATION_XML_VALUE);
-
-		Method method = JacksonController.class.getMethod("handleHttpEntity", HttpEntity.class);
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2XmlHttpMessageConverter());
-		HttpEntityMethodProcessor processor = new HttpEntityMethodProcessor(
-				converters, null, List.of(new JsonViewRequestBodyAdvice()));
-
-		@SuppressWarnings("unchecked")
-		HttpEntity<JacksonViewBean> result = (HttpEntity<JacksonViewBean>)
-				processor.resolveArgument(methodParameter, this.container, this.request, this.factory);
-
-		assertThat(result).isNotNull();
-		assertThat(result.getBody()).isNotNull();
-		assertThat(result.getBody().getWithView1()).isEqualTo("with");
-		assertThat(result.getBody().getWithView2()).isNull();
-		assertThat(result.getBody().getWithoutView()).isNull();
-	}
-
-	@Test
-	void jacksonTypeInfoList() throws Exception {
-		Method method = JacksonController.class.getMethod("handleTypeInfoList");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
-
-		Object returnValue = new JacksonController().handleTypeInfoList();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"type\":\"foo\"")
-				.contains("\"type\":\"bar\"");
 	}
 
 	@Test  // SPR-12811
-	@SuppressWarnings("removal")
-	void jackson2TypeInfoList() throws Exception {
+	public void jacksonTypeInfoList() throws Exception {
 		Method method = JacksonController.class.getMethod("handleTypeInfoList");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		Object returnValue = new JacksonController().handleTypeInfoList();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"type\":\"foo\"")
-				.contains("\"type\":\"bar\"");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("\"type\":\"foo\"")).isTrue();
+		assertThat(content.contains("\"type\":\"bar\"")).isTrue();
 	}
 
-	@Test
-	void jacksonSubType() throws Exception {
+	@Test  // SPR-13318
+	public void jacksonSubType() throws Exception {
 		Method method = JacksonController.class.getMethod("handleSubType");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		Object returnValue = new JacksonController().handleSubType();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"id\":123")
-				.contains("\"name\":\"foo\"");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("\"id\":123")).isTrue();
+		assertThat(content.contains("\"name\":\"foo\"")).isTrue();
 	}
 
 	@Test  // SPR-13318
-	@SuppressWarnings("removal")
-	void jackson2SubType() throws Exception {
-		Method method = JacksonController.class.getMethod("handleSubType");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
-
-		Object returnValue = new JacksonController().handleSubType();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"id\":123")
-				.contains("\"name\":\"foo\"");
-	}
-
-	@Test
-	void jacksonSubTypeList() throws Exception {
+	public void jacksonSubTypeList() throws Exception {
 		Method method = JacksonController.class.getMethod("handleSubTypeList");
 		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
 		MethodParameter methodReturnType = handlerMethod.getReturnType();
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		Object returnValue = new JacksonController().handleSubTypeList();
 		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
 
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"id\":123")
-				.contains("\"name\":\"foo\"")
-				.contains("\"id\":456")
-				.contains("\"name\":\"bar\"");
-	}
-
-	@Test  // SPR-13318
-	@SuppressWarnings("removal")
-	void jackson2SubTypeList() throws Exception {
-		Method method = JacksonController.class.getMethod("handleSubTypeList");
-		HandlerMethod handlerMethod = new HandlerMethod(new JacksonController(), method);
-		MethodParameter methodReturnType = handlerMethod.getReturnType();
-
-		List<HttpMessageConverter<?>> converters = List.of(new MappingJackson2HttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
-
-		Object returnValue = new JacksonController().handleSubTypeList();
-		processor.handleReturnValue(returnValue, methodReturnType, this.container, this.request);
-
-		assertThat(this.servletResponse.getContentAsString())
-				.contains("\"id\":123")
-				.contains("\"name\":\"foo\"")
-				.contains("\"id\":456")
-				.contains("\"name\":\"bar\"");
+		String content = this.servletResponse.getContentAsString();
+		assertThat(content.contains("\"id\":123")).isTrue();
+		assertThat(content.contains("\"name\":\"foo\"")).isTrue();
+		assertThat(content.contains("\"id\":456")).isTrue();
+		assertThat(content.contains("\"name\":\"bar\"")).isTrue();
 	}
 
 	@Test  // SPR-14520
-	void resolveArgumentTypeVariableWithGenericInterface() throws Exception {
-		this.servletRequest.setContent("\"foo\"".getBytes(StandardCharsets.UTF_8));
+	public void resolveArgumentTypeVariableWithGenericInterface() throws Exception {
+		this.servletRequest.setContent("\"foo\"".getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
 		Method method = MyControllerImplementingInterface.class.getMethod("handle", Object.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new MyControllerImplementingInterface(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
+
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		assertThat(processor.supportsParameter(methodParameter)).isTrue();
@@ -989,33 +750,17 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 	@Test  // gh-24127
-	void resolveArgumentTypeVariableWithGenericInterfaceAndSubclass() throws Exception {
-		this.servletRequest.setContent("\"foo\"".getBytes(StandardCharsets.UTF_8));
+	public void resolveArgumentTypeVariableWithGenericInterfaceAndSubclass() throws Exception {
+		this.servletRequest.setContent("\"foo\"".getBytes("UTF-8"));
 		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
 		Method method = SubControllerImplementingInterface.class.getMethod("handle", Object.class);
 		HandlerMethod handlerMethod = new HandlerMethod(new SubControllerImplementingInterface(), method);
 		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
 
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
-		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
+		List<HttpMessageConverter<?>> converters = new ArrayList<>();
+		converters.add(new MappingJackson2HttpMessageConverter());
 
-		assertThat(processor.supportsParameter(methodParameter)).isTrue();
-		String value = (String) processor.readWithMessageConverters(
-				this.request, methodParameter, methodParameter.getGenericParameterType());
-		assertThat(value).isEqualTo("foo");
-	}
-
-	@Test  // gh-25788
-	void resolveArgumentTypeVariableWithAbstractMethod() throws Exception {
-		this.servletRequest.setContent("\"foo\"".getBytes(StandardCharsets.UTF_8));
-		this.servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
-
-		Method method = SubControllerImplementingAbstractMethod.class.getMethod("handle", Object.class);
-		HandlerMethod handlerMethod = new HandlerMethod(new SubControllerImplementingAbstractMethod(), method);
-		MethodParameter methodParameter = handlerMethod.getMethodParameters()[0];
-
-		List<HttpMessageConverter<?>> converters = List.of(new JacksonJsonHttpMessageConverter());
 		RequestResponseBodyMethodProcessor processor = new RequestResponseBodyMethodProcessor(converters);
 
 		assertThat(processor.supportsParameter(methodParameter)).isTrue();
@@ -1042,13 +787,12 @@ class RequestResponseBodyMethodProcessorTests {
 					.isNull();
 		}
 
-		this.servletRequest.clearAttributes();
-		this.servletResponse.setCommitted(false);
-		this.servletResponse.reset();
+		this.servletRequest = new MockHttpServletRequest();
+		this.servletResponse = new MockHttpServletResponse();
+		this.request = new ServletWebRequest(servletRequest, servletResponse);
 	}
 
 
-	@SuppressWarnings("ConstantConditions")
 	String handle(
 			@RequestBody List<SimpleBean> list,
 			@RequestBody SimpleBean simpleBean,
@@ -1058,40 +802,21 @@ class RequestResponseBodyMethodProcessorTests {
 		return null;
 	}
 
-	@SuppressWarnings("ConstantConditions")
 	Resource getImage() {
 		return null;
 	}
 
-	@SuppressWarnings("ConstantConditions")
-	MyProblemDetail handleAndReturnProblemDetail() {
-		return null;
-	}
-
-	@SuppressWarnings("ConstantConditions")
 	@RequestMapping
 	OutputStream handleAndReturnOutputStream() {
 		return null;
 	}
 
-	@SuppressWarnings("ConstantConditions")
 	SimpleBean getSimpleBean() {
 		return null;
 	}
 
 
-	@SuppressWarnings("serial")
-	private static class MyProblemDetail extends ProblemDetail {
-
-		private static final long serialVersionUID = 848059476504348430L;
-
-		public MyProblemDetail(HttpStatus status) {
-			super(status.value());
-		}
-	}
-
-
-	private abstract static class MyParameterizedController<DTO extends Identifiable> {
+	private static abstract class MyParameterizedController<DTO extends Identifiable> {
 
 		@SuppressWarnings("unused")
 		public void handleDto(@RequestBody DTO dto) {}
@@ -1111,7 +836,7 @@ class RequestResponseBodyMethodProcessorTests {
 
 
 	@SuppressWarnings("unused")
-	private abstract static class MyParameterizedControllerWithList<DTO extends Identifiable> {
+	private static abstract class MyParameterizedControllerWithList<DTO extends Identifiable> {
 
 		public void handleDto(@RequestBody List<DTO> dto) {
 		}
@@ -1123,7 +848,7 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 
-	@SuppressWarnings({"serial", "NotNullFieldNotInitialized"})
+	@SuppressWarnings({ "serial" })
 	private static class SimpleBean implements Identifiable {
 
 		private Long id;
@@ -1150,7 +875,7 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 
-	private static final class ValidatingBinderFactory implements WebDataBinderFactory {
+	private final class ValidatingBinderFactory implements WebDataBinderFactory {
 
 		@Override
 		public WebDataBinder createBinder(NativeWebRequest request, @Nullable Object target, String objectName) {
@@ -1171,7 +896,6 @@ class RequestResponseBodyMethodProcessorTests {
 			return "hello";
 		}
 
-		@SuppressWarnings("ConstantConditions")
 		@RequestMapping
 		public CharSequence handleWithCharSequence() {
 			return null;
@@ -1194,7 +918,6 @@ class RequestResponseBodyMethodProcessorTests {
 	private interface MyJacksonView2 {}
 
 
-	@SuppressWarnings("NotNullFieldNotInitialized")
 	private static class JacksonViewBean {
 
 		@JsonView(MyJacksonView1.class)
@@ -1213,7 +936,7 @@ class RequestResponseBodyMethodProcessorTests {
 			this.withView1 = withView1;
 		}
 
-		public @Nullable String getWithView2() {
+		public String getWithView2() {
 			return withView2;
 		}
 
@@ -1221,7 +944,7 @@ class RequestResponseBodyMethodProcessorTests {
 			this.withView2 = withView2;
 		}
 
-		public @Nullable String getWithoutView() {
+		public String getWithoutView() {
 			return withoutView;
 		}
 
@@ -1231,8 +954,7 @@ class RequestResponseBodyMethodProcessorTests {
 	}
 
 
-	@SuppressWarnings("NotNullFieldNotInitialized")
-	@JsonTypeInfo(use = JsonTypeInfo.Id.NAME, property = "type")
+	@JsonTypeInfo(use = JsonTypeInfo.Id.NAME, include = JsonTypeInfo.As.PROPERTY, property = "type")
 	public static class ParentClass {
 
 		private String parentProperty;
@@ -1284,7 +1006,10 @@ class RequestResponseBodyMethodProcessorTests {
 		@ResponseBody
 		@SuppressWarnings("unchecked")
 		public List<T> handleTypeInfoList() {
-			return List.of((T) new Foo("foo"), (T) new Bar("bar"));
+			List<T> list = new ArrayList<>();
+			list.add((T) new Foo("foo"));
+			list.add((T) new Bar("bar"));
+			return list;
 		}
 	}
 
@@ -1309,6 +1034,8 @@ class RequestResponseBodyMethodProcessorTests {
 			bean.setWithView1("with");
 			bean.setWithView2("with");
 			bean.setWithoutView("without");
+			ModelAndView mav = new ModelAndView(new MappingJackson2JsonView());
+			mav.addObject("bean", bean);
 			return new ResponseEntity<>(bean, HttpStatus.OK);
 		}
 
@@ -1318,7 +1045,6 @@ class RequestResponseBodyMethodProcessorTests {
 			return bean;
 		}
 
-		@SuppressWarnings("ConstantConditions")
 		@RequestMapping
 		@ResponseBody
 		public JacksonViewBean handleHttpEntity(@JsonView(MyJacksonView1.class) HttpEntity<JacksonViewBean> entity) {
@@ -1399,21 +1125,6 @@ class RequestResponseBodyMethodProcessorTests {
 
 
 	static class SubControllerImplementingInterface extends MyControllerImplementingInterface {
-
-		@Override
-		public String handle(String arg) {
-			return arg;
-		}
-	}
-
-
-	abstract static class MyControllerWithAbstractMethod<A> {
-
-		public abstract A handle(@RequestBody A arg);
-	}
-
-
-	static class SubControllerImplementingAbstractMethod extends MyControllerWithAbstractMethod<String> {
 
 		@Override
 		public String handle(String arg) {
