@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-present the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,14 +17,15 @@
 package org.springframework.web.socket.client;
 
 import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
 
-import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.context.Lifecycle;
 import org.springframework.http.HttpHeaders;
+import org.springframework.util.concurrent.ListenableFuture;
+import org.springframework.util.concurrent.ListenableFutureTask;
 import org.springframework.web.socket.WebSocketHandler;
 import org.springframework.web.socket.WebSocketHttpHeaders;
 import org.springframework.web.socket.WebSocketSession;
@@ -40,11 +41,12 @@ import static org.assertj.core.api.Assertions.assertThat;
  *
  * @author Rossen Stoyanchev
  */
-class WebSocketConnectionManagerTests {
+public class WebSocketConnectionManagerTests {
+
 
 	@Test
-	void openConnection() {
-		List<String> subprotocols = List.of("abc");
+	public void openConnection() throws Exception {
+		List<String> subprotocols = Arrays.asList("abc");
 
 		TestLifecycleWebSocketClient client = new TestLifecycleWebSocketClient(false);
 		WebSocketHandler handler = new TextWebSocketHandler();
@@ -57,7 +59,7 @@ class WebSocketConnectionManagerTests {
 		expectedHeaders.setSecWebSocketProtocol(subprotocols);
 
 		assertThat(client.headers).isEqualTo(expectedHeaders);
-		assertThat(client.uri).isEqualTo(URI.create("/path/123"));
+		assertThat(client.uri).isEqualTo(new URI("/path/123"));
 
 		WebSocketHandlerDecorator loggingHandler = (WebSocketHandlerDecorator) client.webSocketHandler;
 		assertThat(loggingHandler.getClass()).isEqualTo(LoggingWebSocketHandlerDecorator.class);
@@ -66,7 +68,7 @@ class WebSocketConnectionManagerTests {
 	}
 
 	@Test
-	void clientLifecycle() throws Exception {
+	public void clientLifecycle() throws Exception {
 		TestLifecycleWebSocketClient client = new TestLifecycleWebSocketClient(false);
 		WebSocketHandler handler = new TextWebSocketHandler();
 		WebSocketConnectionManager manager = new WebSocketConnectionManager(client, handler , "/a");
@@ -110,21 +112,21 @@ class WebSocketConnectionManagerTests {
 		}
 
 		@Override
-		public CompletableFuture<WebSocketSession> execute(WebSocketHandler handler,
-				String uriTemplate, @Nullable Object... uriVars) {
+		public ListenableFuture<WebSocketSession> doHandshake(WebSocketHandler handler,
+				String uriTemplate, Object... uriVars) {
 
 			URI uri = UriComponentsBuilder.fromUriString(uriTemplate).buildAndExpand(uriVars).encode().toUri();
-			return execute(handler, null, uri);
+			return doHandshake(handler, null, uri);
 		}
 
 		@Override
-		public CompletableFuture<WebSocketSession> execute(WebSocketHandler handler,
+		public ListenableFuture<WebSocketSession> doHandshake(WebSocketHandler handler,
 				WebSocketHttpHeaders headers, URI uri) {
 
 			this.webSocketHandler = handler;
 			this.headers = headers;
 			this.uri = uri;
-			return CompletableFuture.supplyAsync(() -> null);
+			return new ListenableFutureTask<>(() -> null);
 		}
 	}
 
